feat: refactor docs

--- a/docs/工具函数规范.md
+++ b/docs/工具函数规范.md
@@ -120,7 +120,7 @@ export default PKCEUtils;
 
 ### 3.1 函数定义规范
 
-```typescript
+````typescript
 /**
  * 生成PKCE code_verifier
  * @returns {string} Base64URL编码的随机字符串
@@ -134,16 +134,12 @@ export default PKCEUtils;
 export function generateCodeVerifier(): string {
   try {
     const buffer = randomBytes(96);
-    return buffer
-      .toString('base64')
-      .replace(/\+/g, '-')
-      .replace(/\//g, '_')
-      .replace(/=/g, '');
+    return buffer.toString('base64').replace(/\+/g, '-').replace(/\//g, '_').replace(/=/g, '');
   } catch (error) {
     throw new Error(`Failed to generate code verifier: ${error.message}`);
   }
 }
-```
+````
 
 ### 3.2 类定义规范
 
@@ -169,10 +165,7 @@ export class PKCEUtils {
    * @param {string} method - 挑战方法，默认为'S256'
    * @returns {string} Base64URL编码的code_challenge
    */
-  static generateCodeChallenge(
-    codeVerifier: string,
-    method: string = 'S256'
-  ): string {
+  static generateCodeChallenge(codeVerifier: string, method: string = 'S256'): string {
     // 实现代码
   }
 
@@ -267,7 +260,7 @@ export enum AuthErrorType {
   ACCOUNT_LOCKED = 'ACCOUNT_LOCKED',
   TOKEN_EXPIRED = 'TOKEN_EXPIRED',
   INSUFFICIENT_PERMISSIONS = 'INSUFFICIENT_PERMISSIONS',
-  INVALID_TOKEN = 'INVALID_TOKEN'
+  INVALID_TOKEN = 'INVALID_TOKEN',
 }
 
 /**
@@ -277,7 +270,7 @@ export enum PermissionAction {
   READ = 'read',
   WRITE = 'write',
   DELETE = 'delete',
-  EXECUTE = 'execute'
+  EXECUTE = 'execute',
 }
 ```
 
@@ -294,7 +287,7 @@ export enum PermissionAction {
 export abstract class BaseError extends Error {
   abstract readonly code: string;
   abstract readonly statusCode: number;
-  
+
   constructor(
     message: string,
     public readonly details?: Record<string, any>
@@ -310,7 +303,7 @@ export abstract class BaseError extends Error {
       code: this.code,
       message: this.message,
       details: this.details,
-      statusCode: this.statusCode
+      statusCode: this.statusCode,
     };
   }
 }
@@ -355,23 +348,19 @@ export class AuthorizationError extends BaseError {
 /**
  * 结果类型定义
  */
-export type Result<T, E = Error> = 
-  | { success: true; data: T }
-  | { success: false; error: E };
+export type Result<T, E = Error> = { success: true; data: T } | { success: false; error: E };
 
 /**
  * 安全执行函数，返回Result类型
  */
-export async function safeExecute<T>(
-  fn: () => Promise<T>
-): Promise<Result<T>> {
+export async function safeExecute<T>(fn: () => Promise<T>): Promise<Result<T>> {
   try {
     const data = await fn();
     return { success: true, data };
   } catch (error) {
-    return { 
-      success: false, 
-      error: error instanceof Error ? error : new Error(String(error))
+    return {
+      success: false,
+      error: error instanceof Error ? error : new Error(String(error)),
     };
   }
 }
@@ -384,7 +373,7 @@ export async function validateToken(token: string): Promise<Result<JWTPayload>> 
     if (!token) {
       throw new AuthenticationError('Token is required');
     }
-    
+
     const payload = await verifyJWT(token);
     return payload;
   });
@@ -395,10 +384,10 @@ export async function validateToken(token: string): Promise<Result<JWTPayload>> 
 
 ### 6.1 JSDoc标准
 
-```typescript
+````typescript
 /**
  * 验证用户权限
- * 
+ *
  * @description 检查用户是否具有指定资源的特定权限
  * @param {string} userId - 用户ID
  * @param {string} resource - 资源标识
@@ -409,19 +398,19 @@ export async function validateToken(token: string): Promise<Result<JWTPayload>> 
  * @returns {Promise<boolean>} 权限验证结果
  * @throws {AuthenticationError} 当用户未认证时
  * @throws {AuthorizationError} 当权限验证失败时
- * 
+ *
  * @example
  * ```typescript
  * // 检查用户读取权限
  * const canRead = await checkPermission('user123', 'articles', PermissionAction.READ);
- * 
+ *
  * // 使用选项
  * const canWrite = await checkPermission('user123', 'articles', PermissionAction.WRITE, {
  *   useCache: false,
  *   timeout: 3000
  * });
  * ```
- * 
+ *
  * @since 1.0.0
  * @author 开发团队
  */
@@ -436,7 +425,7 @@ export async function checkPermission(
 ): Promise<boolean> {
   // 实现代码
 }
-```
+````
 
 ### 6.2 类型注释
 
@@ -481,7 +470,7 @@ describe('PKCEUtils', () => {
   describe('generateCodeVerifier', () => {
     test('应该生成符合长度要求的code_verifier', () => {
       const verifier = PKCEUtils.generateCodeVerifier();
-      
+
       expect(verifier).toBeDefined();
       expect(verifier.length).toBeGreaterThanOrEqual(43);
       expect(verifier.length).toBeLessThanOrEqual(128);
@@ -489,14 +478,14 @@ describe('PKCEUtils', () => {
 
     test('应该生成URL安全的字符串', () => {
       const verifier = PKCEUtils.generateCodeVerifier();
-      
+
       expect(verifier).toMatch(/^[A-Za-z0-9\-._~]+$/);
     });
 
     test('每次生成的verifier应该不同', () => {
       const verifier1 = PKCEUtils.generateCodeVerifier();
       const verifier2 = PKCEUtils.generateCodeVerifier();
-      
+
       expect(verifier1).not.toBe(verifier2);
     });
   });
@@ -506,14 +495,14 @@ describe('PKCEUtils', () => {
       const verifier = 'test-verifier-123';
       const challenge1 = PKCEUtils.generateCodeChallenge(verifier);
       const challenge2 = PKCEUtils.generateCodeChallenge(verifier);
-      
+
       expect(challenge1).toBe(challenge2);
     });
 
     test('应该生成Base64URL编码的字符串', () => {
       const verifier = 'test-verifier-123';
       const challenge = PKCEUtils.generateCodeChallenge(verifier);
-      
+
       expect(challenge).toMatch(/^[A-Za-z0-9\-_]+$/);
     });
   });
@@ -522,7 +511,7 @@ describe('PKCEUtils', () => {
     test('应该验证正确的verifier和challenge组合', () => {
       const verifier = PKCEUtils.generateCodeVerifier();
       const challenge = PKCEUtils.generateCodeChallenge(verifier);
-      
+
       const isValid = PKCEUtils.verifyCodeChallenge(verifier, challenge);
       expect(isValid).toBe(true);
     });
@@ -531,7 +520,7 @@ describe('PKCEUtils', () => {
       const verifier1 = PKCEUtils.generateCodeVerifier();
       const verifier2 = PKCEUtils.generateCodeVerifier();
       const challenge = PKCEUtils.generateCodeChallenge(verifier1);
-      
+
       const isValid = PKCEUtils.verifyCodeChallenge(verifier2, challenge);
       expect(isValid).toBe(false);
     });
@@ -573,7 +562,7 @@ describe('OAuth2.1 Authorization Flow Integration', () => {
       scope: 'openid profile',
       codeChallenge,
       codeChallengeMethod: 'S256',
-      userId: user.id
+      userId: user.id,
     });
 
     expect(authResult.success).toBe(true);
@@ -585,7 +574,7 @@ describe('OAuth2.1 Authorization Flow Integration', () => {
       code: authResult.data.code,
       redirectUri: client.redirectUris[0],
       clientId: client.clientId,
-      codeVerifier
+      codeVerifier,
     });
 
     expect(tokenResult.success).toBe(true);
@@ -644,18 +633,10 @@ export { JWTUtils } from './jwt';
 export { OAuth2Validator } from './validation';
 
 // 重新导出类型
-export type {
-  PKCEParams,
-  AuthorizationRequest,
-  TokenResponse
-} from '../types/oauth';
+export type { PKCEParams, AuthorizationRequest, TokenResponse } from '../types/oauth';
 
 // 重新导出常量
-export {
-  OAUTH2_GRANT_TYPES,
-  OAUTH2_RESPONSE_TYPES,
-  OAUTH2_SCOPES
-} from '../constants/oauth';
+export { OAUTH2_GRANT_TYPES, OAUTH2_RESPONSE_TYPES, OAUTH2_SCOPES } from '../constants/oauth';
 ```
 
 ### 8.3 使用示例
@@ -667,7 +648,7 @@ import {
   authMiddleware,
   PermissionService,
   AuthenticationError,
-  type AuthorizationRequest
+  type AuthorizationRequest,
 } from '@/lib';
 
 // 或者按模块导入
@@ -692,23 +673,28 @@ import { PermissionService } from '@/lib/permission';
 ## [1.1.0] - 2024-01-20
 
 ### 新增
+
 - 添加JWT令牌轮换功能
 - 支持Redis缓存配置
 
 ### 修改
+
 - 优化权限查询性能
 - 更新错误消息格式
 
 ### 修复
+
 - 修复PKCE验证边界情况
 - 解决内存泄漏问题
 
 ### 废弃
+
 - `oldFunction()` 将在v2.0.0中移除
 
 ## [1.0.0] - 2024-01-15
 
 ### 新增
+
 - 初始版本发布
 - OAuth2.1核心功能
 - RBAC权限系统
