fix: delete unused file

--- a/docs/系统架构设计.md
+++ b/docs/系统架构设计.md
@@ -58,35 +58,104 @@
 
 ### 前端技术栈
 
-- **框架**: Next.js 15 (App Router)
-- **语言**: TypeScript 5.x
-- **样式**: Tailwind CSS 3.x
-- **UI组件**: Shadcn/ui (基于Radix UI)
-- **状态管理**: Zustand
-- **表单处理**: React Hook Form + Zod
-- **HTTP客户端**: Fetch API (原生)
+- **框架**: Next.js 15.1.0 (App Router)
+- **语言**: TypeScript 5.6.x
+- **样式**: Tailwind CSS 3.4.x
+- **UI组件**: Shadcn/ui 0.8.x (基于Radix UI)
+- **状态管理**: Zustand 4.5.x
+- **表单处理**: React Hook Form 7.x + Zod 3.x
+- **HTTP客户端**: Fetch API (原生) + TanStack Query 5.x
 - **构建工具**: Turbopack (Next.js 15内置)
+- **图标**: Lucide React 0.4.x
 
 ### 后端技术栈
 
-- **运行时**: Node.js 18+
-- **框架**: Next.js 15 API Routes
-- **语言**: TypeScript 5.x
-- **数据库**: SQLite (开发) / PostgreSQL (生产)
-- **ORM**: Prisma 5.x
-- **认证**: JWT + OAuth 2.1
-- **加密**: bcrypt (密码哈希)
-- **验证**: Zod (数据验证)
-- **缓存**: 内存缓存 + Redis (可选)
-- **WebAssembly**: Rust + wasm-pack (性能关键模块)
+- **运行时**: Node.js 18.20+ / 20.x LTS
+- **框架**: Next.js 15.1.0 API Routes
+- **语言**: TypeScript 5.6.x
+- **数据库**: SQLite 3.x (开发) / PostgreSQL 15+ (生产)
+- **ORM**: Prisma 5.22.x
+- **认证**: JWT (jose 5.x) + OAuth 2.1
+- **加密**: bcrypt 5.x (密码哈希)
+- **验证**: Zod 3.x (数据验证)
+- **缓存**: 内存缓存 + Redis 7.x (可选)
+- **WebAssembly**: Rust 1.75+ + wasm-pack 0.12.x
+- **日期处理**: date-fns 3.x
+
+### WebAssembly架构
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│                    前端 (Next.js)                          │
+├─────────────────────────────────────────────────────────────┤
+│  TypeScript/JavaScript 业务逻辑                            │
+├─────────────────────────────────────────────────────────────┤
+│  WASM 绑定层 (wasm-bindgen)                               │
+├─────────────────────────────────────────────────────────────┤
+│  WebAssembly 模块                                          │
+│  ┌─────────────────┐  ┌─────────────────┐                 │
+│  │   K线计算模块    │  │   加密算法模块   │                 │
+│  │   (Rust)        │  │   (Rust)        │                 │
+│  └─────────────────┘  └─────────────────┘                 │
+└─────────────────────────────────────────────────────────────┘
+```
+
+**WASM模块功能**:
+- **K线数据处理**: 高性能的金融数据计算和渲染
+- **加密算法**: 性能关键的加密解密操作
+- **数据压缩**: 大数据量的压缩和解压缩
+- **图像处理**: Canvas绘制优化
+
+### 数据库与Prisma对应关系
+
+```typescript
+// Prisma Schema 与数据库表对应关系
+model User {
+  // 对应数据库表: users
+  id           String    @id @default(cuid())
+  username     String    @unique
+  passwordHash String    @map("password_hash")
+  // ... 其他字段
+  
+  @@map("users") // 显式指定表名
+}
+
+model OAuthClient {
+  // 对应数据库表: oauth_clients
+  id                String     @id @default(cuid())
+  clientId          String     @unique @map("client_id")
+  clientSecret      String?    @map("client_secret")
+  // ... 其他字段
+  
+  @@map("oauth_clients")
+}
+
+model AccessToken {
+  // 对应数据库表: access_tokens
+  id        String   @id @default(cuid())
+  token     String   @unique
+  tokenHash String   @unique @map("token_hash")
+  // ... 其他字段
+  
+  @@map("access_tokens")
+}
+```
+
+**数据库设计原则**:
+- **表名**: 使用snake_case命名(users, oauth_clients)
+- **字段名**: 使用snake_case命名(client_id, password_hash)
+- **索引**: 关键查询字段添加索引
+- **外键**: 使用Prisma关系管理外键约束
+- **迁移**: 使用Prisma Migrate管理数据库版本
 
 ### 开发工具
 
-- **包管理**: pnpm
-- **代码规范**: ESLint + Prettier
-- **类型检查**: TypeScript
-- **测试框架**: Vitest + Testing Library
-- **Git钩子**: Husky + lint-staged
+- **包管理**: pnpm 8.x
+- **代码规范**: ESLint 8.x + Prettier 3.x
+- **类型检查**: TypeScript 5.6.x
+- **测试框架**: Vitest 1.x + Testing Library
+- **Git钩子**: Husky 8.x + lint-staged 15.x
+- **容器化**: Docker 24.x + Docker Compose 2.x
 
 ### 系统架构
 
@@ -100,73 +169,607 @@
 └─────────────────┘    └─────────────────┘    └─────────────────┘
 ```
 
+## 安全机制
+
+### OAuth2.1 安全增强
+
+#### PKCE (Proof Key for Code Exchange)
+```typescript
+// PKCE 流程实现
+interface PKCEChallenge {
+  codeVerifier: string;    // 43-128字符的随机字符串
+  codeChallenge: string;   // SHA256(codeVerifier) 的 base64url 编码
+  codeChallengeMethod: 'S256'; // 固定使用 SHA256
+}
+
+// 代码挑战生成
+function generatePKCEChallenge(): PKCEChallenge {
+  const codeVerifier = generateRandomString(128);
+  const codeChallenge = base64urlEncode(sha256(codeVerifier));
+  return {
+    codeVerifier,
+    codeChallenge,
+    codeChallengeMethod: 'S256'
+  };
+}
+```
+
+#### JWT 安全配置
+```typescript
+// JWT 配置
+interface JWTConfig {
+  algorithm: 'RS256';           // 使用 RSA SHA-256
+  issuer: string;               // 发行者标识
+  audience: string[];           // 受众列表
+  accessTokenTtl: number;       // 访问令牌有效期 (秒)
+  refreshTokenTtl: number;      // 刷新令牌有效期 (秒)
+  keyRotationInterval: number;  // 密钥轮换间隔 (天)
+}
+
+// 令牌安全特性
+- **短期访问令牌**: 默认1小时过期
+- **长期刷新令牌**: 默认30天过期，支持轮换
+- **令牌绑定**: 绑定客户端和用户
+- **作用域限制**: 细粒度权限控制
+- **令牌撤销**: 支持主动撤销
+```
+
+#### 密码安全策略
+```typescript
+// 密码哈希配置
+interface PasswordConfig {
+  algorithm: 'bcrypt';     // 使用 bcrypt
+  saltRounds: 12;          // 盐轮数
+  minLength: 8;            // 最小长度
+  requireUppercase: true;  // 需要大写字母
+  requireLowercase: true;  // 需要小写字母
+  requireNumbers: true;    // 需要数字
+  requireSymbols: true;    // 需要特殊字符
+}
+
+// 账户安全
+- **登录失败锁定**: 5次失败后锁定30分钟
+- **密码过期**: 90天强制更换
+- **密码历史**: 禁止重复使用最近5个密码
+- **会话管理**: 30分钟无操作自动登出
+```
+
+### API 安全设计
+
+#### 请求验证
+```typescript
+// API 请求验证中间件
+interface APISecurityMiddleware {
+  rateLimit: RateLimitConfig;      // 速率限制
+  cors: CORSConfig;                // 跨域配置
+  csrf: CSRFConfig;                // CSRF 保护
+  contentValidation: ValidationConfig; // 内容验证
+}
+
+// 速率限制配置
+interface RateLimitConfig {
+  windowMs: number;        // 时间窗口 (毫秒)
+  maxRequests: number;     // 最大请求数
+  skipSuccessfulRequests: boolean; // 跳过成功请求
+  keyGenerator: (req: Request) => string; // 键生成器
+}
+```
+
+#### 数据验证
+```typescript
+// 使用 Zod 进行数据验证
+const AuthorizationRequestSchema = z.object({
+  response_type: z.literal('code'),
+  client_id: z.string().min(1),
+  redirect_uri: z.string().url(),
+  scope: z.string().optional(),
+  state: z.string().min(1),
+  code_challenge: z.string().min(43).max(128),
+  code_challenge_method: z.literal('S256')
+});
+
+// 输入清理和转义
+function sanitizeInput(input: string): string {
+  return input
+    .trim()
+    .replace(/[<>"'&]/g, (char) => {
+      const entities: Record<string, string> = {
+        '<': '&lt;',
+        '>': '&gt;',
+        '"': '&quot;',
+        "'": '&#x27;',
+        '&': '&amp;'
+      };
+      return entities[char] || char;
+    });
+}
+```
+
 ## 数据库设计
 
 ### 核心模型
 
 #### User (用户)
-
-```sql
+```typescript
 model User {
   id           String    @id @default(cuid())
   username     String    @unique
-  passwordHash String
-  isActive     Boolean   @default(true)
-  displayName  String?
-  firstName    String?
-  lastName     String?
-  organization String?
-  department   String?
-  mustChangePassword Boolean @default(true)
-  createdBy    String?   // 创建者ID（管理员）
+  passwordHash String    @map("password_hash")
+  isActive     Boolean   @default(true) @map("is_active")
+  displayName  String?   @map("display_name")
+  lastLoginAt  DateTime? @map("last_login_at")
+  passwordChangedAt DateTime @default(now()) @map("password_changed_at")
+  failedLoginAttempts Int @default(0) @map("failed_login_attempts")
+  lockedUntil  DateTime? @map("locked_until")
+  createdAt    DateTime  @default(now()) @map("created_at")
+  updatedAt    DateTime  @updatedAt @map("updated_at")
+  
   // 关联关系
-  userRoles          UserRole[]
+  roles              UserRole[]
   authorizationCodes AuthorizationCode[]
   accessTokens       AccessToken[]
   refreshTokens      RefreshToken[]
+  
+  @@map("users")
+  @@index([username])
+  @@index([isActive])
 }
 ```
 
 #### OAuthClient (OAuth客户端)
-
-```sql
+```typescript
 model OAuthClient {
   id                String     @id @default(cuid())
-  clientId          String     @unique
-  clientSecret      String?    // 机密客户端的密钥
-  clientType        ClientType // PUBLIC 或 CONFIDENTIAL
+  clientId          String     @unique @map("client_id")
+  clientSecret      String?    @map("client_secret") // 公共客户端可为空
+  clientType        ClientType @map("client_type") // PUBLIC | CONFIDENTIAL
   name              String
-  description       String?
-  redirectUris      String[]   // 重定向URI列表
-  allowedScopes     String     // 允许的权限范围
-  accessTokenTtl    Int        @default(3600)  // 访问令牌TTL(秒)
-  refreshTokenTtl   Int        @default(2592000) // 刷新令牌TTL(秒)
-  requirePkce       Boolean    @default(true)   // 强制PKCE
-  isActive          Boolean    @default(true)
+  redirectUris      String[]   @map("redirect_uris") // JSON数组
+  allowedScopes     String[]   @map("allowed_scopes") // JSON数组
+  accessTokenTtl    Int        @default(3600) @map("access_token_ttl")    // 秒
+  refreshTokenTtl   Int        @default(2592000) @map("refresh_token_ttl") // 30天
+  requirePkce       Boolean    @default(true) @map("require_pkce")
+  isActive          Boolean    @default(true) @map("is_active")
+  createdAt         DateTime   @default(now()) @map("created_at")
+  updatedAt         DateTime   @updatedAt @map("updated_at")
+  
+  // 关联关系
+  authorizationCodes AuthorizationCode[]
+  accessTokens       AccessToken[]
+  refreshTokens      RefreshToken[]
+  
+  @@map("oauth_clients")
+  @@index([clientId])
+  @@index([isActive])
+}
+
+enum ClientType {
+  PUBLIC
+  CONFIDENTIAL
+  
+  @@map("client_type")
 }
 ```
 
 #### Role & Permission (角色和权限)
-
-```sql
+```typescript
 model Role {
-  id          String @id @default(cuid())
-  name        String @unique
+  id          String     @id @default(cuid())
+  name        String     @unique
   description String?
-  isActive    Boolean @default(true)
-  userRoles   UserRole[]
-  rolePermissions RolePermission[]
+  isActive    Boolean    @default(true) @map("is_active")
+  createdAt   DateTime   @default(now()) @map("created_at")
+  updatedAt   DateTime   @updatedAt @map("updated_at")
+  
+  users       UserRole[]
+  permissions RolePermission[]
+  
+  @@map("roles")
+  @@index([name])
+  @@index([isActive])
 }
 
 model Permission {
-  id          String @id @default(cuid())
-  name        String @unique
+  id          String           @id @default(cuid())
+  name        String           @unique
+  resource    String           // 资源名称
+  action      String           // 操作类型
   description String?
-  resource    String  // 资源标识
-  action      String  // 操作类型
-  isActive    Boolean @default(true)
-  rolePermissions RolePermission[]
+  createdAt   DateTime         @default(now()) @map("created_at")
+  
+  roles       RolePermission[]
+  
+  @@map("permissions")
+  @@index([resource, action])
 }
+
+model UserRole {
+  id     String @id @default(cuid())
+  userId String @map("user_id")
+  roleId String @map("role_id")
+  
+  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
+  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)
+  
+  @@unique([userId, roleId])
+  @@map("user_roles")
+}
+
+model RolePermission {
+  id           String @id @default(cuid())
+  roleId       String @map("role_id")
+  permissionId String @map("permission_id")
+  
+  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
+  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)
+  
+  @@unique([roleId, permissionId])
+  @@map("role_permissions")
+}
+```
+
+#### Token Models (令牌模型)
+```typescript
+model AuthorizationCode {
+  id              String   @id @default(cuid())
+  code            String   @unique
+  codeHash        String   @unique @map("code_hash")
+  clientId        String   @map("client_id")
+  userId          String   @map("user_id")
+  redirectUri     String   @map("redirect_uri")
+  scope           String?
+  codeChallenge   String?  @map("code_challenge")
+  codeChallengeMethod String? @map("code_challenge_method")
+  expiresAt       DateTime @map("expires_at")
+  isUsed          Boolean  @default(false) @map("is_used")
+  createdAt       DateTime @default(now()) @map("created_at")
+  
+  client OAuthClient @relation(fields: [clientId], references: [id], onDelete: Cascade)
+  user   User        @relation(fields: [userId], references: [id], onDelete: Cascade)
+  
+  @@map("authorization_codes")
+  @@index([code])
+  @@index([expiresAt])
+  @@index([clientId, userId])
+}
+
+model AccessToken {
+  id        String   @id @default(cuid())
+  token     String   @unique
+  tokenHash String   @unique @map("token_hash")
+  clientId  String   @map("client_id")
+  userId    String?  @map("user_id") // 客户端凭证流可为空
+  scope     String?
+  expiresAt DateTime @map("expires_at")
+  isRevoked Boolean  @default(false) @map("is_revoked")
+  createdAt DateTime @default(now()) @map("created_at")
+  
+  client OAuthClient @relation(fields: [clientId], references: [id], onDelete: Cascade)
+  user   User?       @relation(fields: [userId], references: [id], onDelete: Cascade)
+  
+  @@map("access_tokens")
+  @@index([token])
+  @@index([expiresAt])
+  @@index([clientId, userId])
+}
+
+model RefreshToken {
+  id        String   @id @default(cuid())
+  token     String   @unique
+  tokenHash String   @unique @map("token_hash")
+  clientId  String   @map("client_id")
+  userId    String   @map("user_id")
+  scope     String?
+  expiresAt DateTime @map("expires_at")
+  isRevoked Boolean  @default(false) @map("is_revoked")
+  createdAt DateTime @default(now()) @map("created_at")
+  
+  client OAuthClient @relation(fields: [clientId], references: [id], onDelete: Cascade)
+  user   User        @relation(fields: [userId], references: [id], onDelete: Cascade)
+  
+  @@map("refresh_tokens")
+  @@index([token])
+  @@index([expiresAt])
+  @@index([clientId, userId])
+}
+```
+
+## API 设计规范
+
+### RESTful API 设计
+
+#### 端点命名规范
+```typescript
+// OAuth2.1 标准端点
+const OAUTH_ENDPOINTS = {
+  // 授权端点
+  AUTHORIZATION: '/oauth/authorize',
+  // 令牌端点
+  TOKEN: '/oauth/token',
+  // 令牌撤销端点
+  REVOKE: '/oauth/revoke',
+  // 令牌内省端点
+  INTROSPECT: '/oauth/introspect',
+  // OIDC 用户信息端点
+  USERINFO: '/oauth/userinfo',
+  // OIDC 发现端点
+  DISCOVERY: '/.well-known/openid-configuration',
+  // JWKS 端点
+  JWKS: '/.well-known/jwks.json'
+} as const;
+
+// 管理 API 端点
+const ADMIN_ENDPOINTS = {
+  // 用户管理
+  USERS: '/api/admin/users',
+  USER_BY_ID: '/api/admin/users/:id',
+  // 客户端管理
+  CLIENTS: '/api/admin/clients',
+  CLIENT_BY_ID: '/api/admin/clients/:id',
+  // 角色权限管理
+  ROLES: '/api/admin/roles',
+  PERMISSIONS: '/api/admin/permissions'
+} as const;
+```
+
+#### HTTP 状态码规范
+```typescript
+// 标准 HTTP 状态码使用
+const HTTP_STATUS = {
+  // 成功响应
+  OK: 200,                    // 请求成功
+  CREATED: 201,               // 资源创建成功
+  NO_CONTENT: 204,            // 请求成功但无内容返回
+  
+  // 重定向
+  FOUND: 302,                 // OAuth 授权重定向
+  
+  // 客户端错误
+  BAD_REQUEST: 400,           // 请求参数错误
+  UNAUTHORIZED: 401,          // 未授权
+  FORBIDDEN: 403,             // 禁止访问
+  NOT_FOUND: 404,             // 资源不存在
+  METHOD_NOT_ALLOWED: 405,    // 方法不允许
+  CONFLICT: 409,              // 资源冲突
+  UNPROCESSABLE_ENTITY: 422,  // 数据验证失败
+  TOO_MANY_REQUESTS: 429,     // 请求过于频繁
+  
+  // 服务器错误
+  INTERNAL_SERVER_ERROR: 500, // 内部服务器错误
+  SERVICE_UNAVAILABLE: 503    // 服务不可用
+} as const;
+```
+
+#### 错误响应格式
+```typescript
+// 标准错误响应格式
+interface ErrorResponse {
+  error: string;              // 错误代码
+  error_description?: string; // 错误描述
+  error_uri?: string;         // 错误详情链接
+  state?: string;             // OAuth 状态参数
+}
+
+// OAuth2.1 标准错误代码
+const OAUTH_ERRORS = {
+  INVALID_REQUEST: 'invalid_request',
+  INVALID_CLIENT: 'invalid_client',
+  INVALID_GRANT: 'invalid_grant',
+  UNAUTHORIZED_CLIENT: 'unauthorized_client',
+  UNSUPPORTED_GRANT_TYPE: 'unsupported_grant_type',
+  INVALID_SCOPE: 'invalid_scope',
+  ACCESS_DENIED: 'access_denied',
+  UNSUPPORTED_RESPONSE_TYPE: 'unsupported_response_type',
+  SERVER_ERROR: 'server_error',
+  TEMPORARILY_UNAVAILABLE: 'temporarily_unavailable'
+} as const;
+```
+
+### API 版本控制
+```typescript
+// API 版本控制策略
+interface APIVersioning {
+  strategy: 'header' | 'path' | 'query';
+  currentVersion: string;
+  supportedVersions: string[];
+  deprecationPolicy: {
+    noticeMonths: number;     // 弃用通知提前月数
+    supportMonths: number;    // 弃用版本支持月数
+  };
+}
+
+// 版本控制实现
+const API_VERSIONING: APIVersioning = {
+  strategy: 'header',
+  currentVersion: 'v1',
+  supportedVersions: ['v1'],
+  deprecationPolicy: {
+    noticeMonths: 6,
+    supportMonths: 12
+  }
+};
+
+// 请求头版本控制
+// Accept: application/vnd.oauth-center.v1+json
+// API-Version: v1
+```
+
+## 部署架构
+
+### 容器化部署
+
+#### Docker 配置
+```dockerfile
+# Dockerfile
+FROM node:20-alpine AS base
+
+# 安装依赖
+FROM base AS deps
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
+COPY package.json pnpm-lock.yaml ./
+RUN corepack enable pnpm && pnpm install --frozen-lockfile
+
+# 构建应用
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+RUN corepack enable pnpm && pnpm build
+
+# 生产镜像
+FROM base AS runner
+WORKDIR /app
+ENV NODE_ENV=production
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+EXPOSE 3000
+ENV PORT=3000
+CMD ["node", "server.js"]
+```
+
+#### Docker Compose 配置
+```yaml
+# docker-compose.yml
+version: '3.8'
+
+services:
+  oauth-center:
+    build: .
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://oauth:password@postgres:5432/oauth_center
+      - REDIS_URL=redis://redis:6379
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+    depends_on:
+      - postgres
+      - redis
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  postgres:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_DB=oauth_center
+      - POSTGRES_USER=oauth
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U oauth"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+volumes:
+  postgres_data:
+```
+
+### 生产环境部署
+
+#### 环境配置
+```bash
+# .env.production
+NODE_ENV=production
+NEXT_TELEMETRY_DISABLED=1
+
+# 数据库配置
+DATABASE_URL="postgresql://oauth:${DB_PASSWORD}@${DB_HOST}:5432/oauth_center?schema=public"
+
+# Redis 配置
+REDIS_URL="redis://:${REDIS_PASSWORD}@${REDIS_HOST}:6379"
+
+# JWT 配置
+JWT_SECRET_KEY="${JWT_SECRET_KEY}"
+JWT_ISSUER="https://oauth.company.com"
+JWT_AUDIENCE="https://api.company.com"
+
+# OAuth 配置
+OAUTH_BASE_URL="https://oauth.company.com"
+OAUTH_COOKIE_SECRET="${OAUTH_COOKIE_SECRET}"
+
+# 安全配置
+CSRF_SECRET="${CSRF_SECRET}"
+SESSION_SECRET="${SESSION_SECRET}"
+
+# 监控配置
+SENTRY_DSN="${SENTRY_DSN}"
+SENTRY_ORG="${SENTRY_ORG}"
+SENTRY_PROJECT="${SENTRY_PROJECT}"
+```
+
+#### Kubernetes 部署
+```yaml
+# k8s/deployment.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: oauth-center
+  namespace: oauth-system
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: oauth-center
+  template:
+    metadata:
+      labels:
+        app: oauth-center
+    spec:
+      containers:
+      - name: oauth-center
+        image: oauth-center:latest
+        ports:
+        - containerPort: 3000
+        env:
+        - name: NODE_ENV
+          value: "production"
+        - name: DATABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: oauth-secrets
+              key: database-url
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /api/health
+            port: 3000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /api/ready
+            port: 3000
+          initialDelaySeconds: 5
+          periodSeconds: 5
 ```
 
 ## API设计
