--- a/docs/产品需求文档.md
+++ b/docs/产品需求文档.md
@@ -306,40 +306,106 @@ OAuth2.1认证授权中心是一个企业级的身份认证和授权管理平台
 
 #### 4.1.3 PKCE安全增强
 
-**功能描述**: 为公共客户端提供PKCE安全增强，防止授权码拦截攻击
+**功能描述**: 为公共客户端提供PKCE安全增强，防止授权码拦截攻击，特别适用于移动应用和单页应用
+
+**业务价值**:
+- **移动应用安全**: 解决移动应用无法安全存储客户端密钥的问题
+- **防止授权码拦截**: 即使授权码被恶意应用拦截，也无法获取访问令牌
+- **零信任架构**: 符合现代零信任安全架构要求
+- **合规性要求**: 满足金融、医疗等行业的安全合规要求
 
 **详细需求**:
 
 1. **Code Challenge生成**
 
-   - 支持S256变换方法
-   - 支持plain方法(仅测试环境)
-   - Code verifier长度验证(43-128字符)
-   - 安全随机数生成
+   - 支持S256变换方法(SHA256哈希)
+   - 支持plain方法(仅测试环境，生产环境禁用)
+   - Code verifier长度验证(43-128字符，符合RFC 7636)
+   - 使用加密安全的随机数生成器
+   - Base64URL编码确保URL安全传输
 
 2. **Code Challenge验证**
 
-   - 授权时存储code_challenge
-   - 令牌交换时验证code_verifier
-   - 验证失败拒绝授权
-   - 详细错误信息返回
+   - 授权请求时存储code_challenge和method
+   - 令牌交换时验证code_verifier与存储的challenge匹配
+   - 验证失败时拒绝授权并记录安全事件
+   - 提供详细的错误信息用于调试
+   - 支持challenge过期机制(默认10分钟)
 
 3. **客户端类型管理**
-   - 公共客户端强制PKCE
-   - 机密客户端可选PKCE
-   - 客户端类型配置
-   - 安全策略执行
+   - 公共客户端(移动应用、SPA)强制启用PKCE
+   - 机密客户端(服务端应用)可选启用PKCE
+   - 支持客户端级别的PKCE策略配置
+   - 安全策略实时生效，无需重启服务
+   - 提供PKCE使用情况的监控和报告
+
+4. **内网环境优化**
+   - 针对内网环境优化PKCE参数生成性能
+   - 支持企业级安全策略集成
+   - 提供PKCE安全事件的审计日志
+   - 支持与企业安全管理平台集成
 
 **验收标准**:
 
 - 完全符合RFC 7636规范
-- 公共客户端100%使用PKCE
+- 公共客户端100%使用PKCE，无例外
 - PKCE验证失败率 < 0.1%
-- 支持主流移动端SDK
+- 支持主流移动端SDK(iOS、Android、React Native)
+- Code verifier生成性能 > 10000 TPS
+- Challenge验证响应时间 < 5ms
 
-### 4.2 权限管理功能
+### 4.2 内网用户管理功能
 
-#### 4.2.1 RBAC权限模型
+#### 4.2.1 内网用户管理特色
+
+**功能描述**: 专为内网环境设计的用户管理体系，无需邮箱/手机验证，由管理员统一管理
+
+**内网环境特点**:
+- **无外网依赖**: 不依赖邮箱、短信等外部验证服务
+- **管理员驱动**: 所有用户由管理员创建和管理，无自助注册
+- **企业集成**: 支持与企业AD/LDAP系统集成
+- **安全可控**: 完全内网环境，数据不出企业边界
+
+**详细需求**:
+
+1. **用户创建管理**
+   - 管理员批量创建用户账号
+   - 支持Excel导入用户信息
+   - 用户基本信息管理(姓名、部门、职位等)
+   - 初始密码策略(强制首次登录修改)
+   - 用户状态管理(激活/锁定/禁用)
+
+2. **企业组织架构**
+   - 部门层级结构管理
+   - 职位体系定义
+   - 用户部门归属管理
+   - 组织架构权限继承
+   - 跨部门协作权限配置
+
+3. **内网身份认证**
+   - 用户名+密码认证(无需邮箱)
+   - 支持企业域账号集成
+   - 支持LDAP/AD单点登录
+   - 支持企业CA证书认证
+   - 支持智能卡/USB Key认证
+
+4. **密码安全策略**
+   - 企业级密码复杂度要求
+   - 密码有效期管理
+   - 密码历史记录防重复
+   - 账号锁定策略
+   - 密码重置流程(管理员操作)
+
+**验收标准**:
+- 支持10万内网用户规模
+- 用户创建响应时间 < 100ms
+- 支持主流企业目录服务集成
+- 用户信息同步延迟 < 5分钟
+- 密码策略100%强制执行
+
+### 4.3 权限管理功能
+
+#### 4.3.1 RBAC权限模型
 
 **功能描述**: 基于角色的访问控制，提供灵活的权限管理能力
 
