--- a/docs/工具函数规范.md
+++ b/docs/工具函数规范.md
@@ -36,38 +36,89 @@
 
 ```
 lib/
-├── index.ts                 # 统一导出文件
+├── index.ts                 # 统一导出入口
 ├── types/                   # 类型定义
-│   ├── index.ts
-│   ├── oauth.ts
-│   ├── auth.ts
-│   └── permission.ts
-├── oauth2/                  # OAuth2.1相关工具
-│   ├── index.ts
-│   ├── pkce.ts
-│   ├── jwt.ts
-│   └── validation.ts
-├── auth/                    # 认证相关工具
-│   ├── index.ts
-│   ├── middleware.ts
-│   ├── password.ts
-│   └── session.ts
-├── permission/              # 权限相关工具
-│   ├── index.ts
-│   ├── rbac.ts
-│   ├── cache.ts
-│   └── service.ts
-├── utils/                   # 通用工具函数
-│   ├── index.ts
-│   ├── crypto.ts
-│   ├── validation.ts
-│   ├── cache.ts
-│   └── logger.ts
-└── constants/               # 常量定义
-    ├── index.ts
-    ├── oauth.ts
-    ├── errors.ts
-    └── config.ts
+│   ├── index.ts            # 类型统一导出
+│   ├── auth.ts             # 认证相关类型
+│   ├── oauth2.ts           # OAuth2 类型定义
+│   ├── api.ts              # API 响应类型
+│   ├── user.ts             # 用户相关类型
+│   ├── client.ts           # 客户端类型
+│   └── permission.ts       # 权限类型
+├── oauth2/                  # OAuth2 相关工具
+│   ├── index.ts            # OAuth2 工具导出
+│   ├── pkce.ts             # PKCE 实现
+│   ├── tokens.ts           # 令牌处理
+│   ├── validation.ts       # 参数验证
+│   ├── grants.ts           # 授权类型处理
+│   ├── scopes.ts           # 作用域管理
+│   └── endpoints.ts        # 端点处理
+├── auth/                    # 认证工具
+│   ├── index.ts            # 认证工具导出
+│   ├── password.ts         # 密码处理
+│   ├── session.ts          # 会话管理
+│   ├── jwt.ts              # JWT 工具
+│   ├── middleware.ts       # 认证中间件
+│   └── rate-limit.ts       # 速率限制
+├── permission/              # 权限相关
+│   ├── index.ts            # 权限工具导出
+│   ├── rbac.ts             # RBAC 实现
+│   ├── scope.ts            # 作用域管理
+│   ├── policy.ts           # 权限策略
+│   └── checker.ts          # 权限检查器
+├── utils/                   # 通用工具
+│   ├── index.ts            # 工具函数导出
+│   ├── crypto.ts           # 加密工具
+│   ├── validation.ts       # 数据验证
+│   ├── format.ts           # 格式化工具
+│   ├── date.ts             # 日期工具
+│   ├── string.ts           # 字符串工具
+│   ├── url.ts              # URL 工具
+│   └── random.ts           # 随机数生成
+├── constants/               # 常量定义
+│   ├── index.ts            # 常量统一导出
+│   ├── oauth2.ts           # OAuth2 常量
+│   ├── errors.ts           # 错误码定义
+│   ├── config.ts           # 配置常量
+│   ├── endpoints.ts        # 端点常量
+│   └── timeouts.ts         # 超时配置
+└── database/                # 数据库工具
+    ├── index.ts            # 数据库工具导出
+    ├── connection.ts       # 连接管理
+    ├── migrations.ts       # 迁移工具
+    └── queries.ts          # 查询构建器
+```
+
+### 文件组织原则
+
+#### 命名规范
+- **文件名**: 使用 kebab-case (如: `rate-limit.ts`)
+- **目录名**: 使用 kebab-case (如: `oauth2/`)
+- **导出文件**: 每个目录必须包含 `index.ts` 作为统一导出入口
+
+#### 模块划分
+- **按功能域划分**: 每个目录代表一个功能域
+- **单一职责**: 每个文件只负责一个具体功能
+- **依赖管理**: 避免循环依赖，明确依赖层次
+
+#### 导出策略
+```typescript
+// lib/index.ts - 主导出文件
+export * from './types';
+export * from './oauth2';
+export * from './auth';
+export * from './permission';
+export * from './utils';
+export * from './constants';
+export * from './database';
+
+// 分类导出
+export * as OAuth2 from './oauth2';
+export * as Auth from './auth';
+export * as Permission from './permission';
+export * as Utils from './utils';
+export * as Constants from './constants';
+export * as Database from './database';
 ```
 
 ## 2. 文件组织规范
@@ -120,23 +171,84 @@ export default PKCEUtils;
 
 ### 3.1 函数定义规范
 
+#### 纯函数优先
 ````typescript
 /**
  * 生成PKCE code_verifier
+ * @param length - 代码验证器长度 (默认128字符)
  * @returns {string} Base64URL编码的随机字符串
- * @throws {Error} 当随机数生成失败时抛出错误
+ * @throws {ValidationError} 当长度参数无效时
+ * @throws {CryptoError} 当随机数生成失败时抛出错误
  * @example
  * ```typescript
  * const verifier = generateCodeVerifier();
  * console.log(verifier); // "dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk"
+ * 
+ * // 指定长度
+ * const shortVerifier = generateCodeVerifier(64);
+ * console.log(shortVerifier.length); // 64
+ * ```
+ * @see {@link https://tools.ietf.org/html/rfc7636#section-4.1 | RFC 7636 Section 4.1}
+ */
+export function generateCodeVerifier(length: number = 128): string {
+  // 验证输入参数
+  if (length < 43 || length > 128) {
+    throw new ValidationError('Code verifier length must be between 43 and 128');
+  }
+  
+  try {
+    const buffer = randomBytes(Math.ceil(length * 3 / 4));
+    return buffer
+      .toString('base64')
+      .replace(/\+/g, '-')
+      .replace(/\//g, '_')
+      .replace(/=/g, '')
+      .substring(0, length);
+  } catch (error) {
+    throw new CryptoError(`Failed to generate code verifier: ${error.message}`);
+  }
+}
+
+/**
+ * 生成PKCE code_challenge
+ * @param codeVerifier - 代码验证器 (43-128字符的随机字符串)
+ * @param method - 挑战方法，默认为'S256'
+ * @returns {string} Base64URL编码的code_challenge
+ * @throws {ValidationError} 当代码验证器格式无效时
+ * @throws {CryptoError} 当哈希计算失败时
+ * @example
+ * ```typescript
+ * const verifier = generateCodeVerifier();
+ * const challenge = generateCodeChallenge(verifier);
+ * console.log(challenge); // 'E9Melhoa2OwvFrEMTJguCHaoeK1t8URWbuGJSstw-cM'
  * ```
  */
-export function generateCodeVerifier(): string {
+export function generateCodeChallenge(
+  codeVerifier: string, 
+  method: 'S256' | 'plain' = 'S256'
+): string {
+  // 验证输入参数
+  if (!codeVerifier || codeVerifier.length < 43 || codeVerifier.length > 128) {
+    throw new ValidationError('Code verifier must be 43-128 characters long');
+  }
+  
+  if (!/^[A-Za-z0-9\-._~]+$/.test(codeVerifier)) {
+    throw new ValidationError('Code verifier contains invalid characters');
+  }
+  
+  if (method === 'plain') {
+    return codeVerifier;
+  }
+  
   try {
-    const buffer = randomBytes(96);
-    return buffer.toString('base64').replace(/\+/g, '-').replace(/\//g, '_').replace(/=/g, '');
+    const hash = createHash('sha256');
+    hash.update(codeVerifier);
+    return hash.digest('base64')
+      .replace(/\+/g, '-')
+      .replace(/\//g, '_')
+      .replace(/=/g, '');
   } catch (error) {
-    throw new Error(`Failed to generate code verifier: ${error.message}`);
+    throw new CryptoError('Failed to generate code challenge', error);
   }
 }
 ````
@@ -287,41 +399,48 @@ export enum PermissionAction {
 export abstract class BaseError extends Error {
   abstract readonly code: string;
   abstract readonly statusCode: number;
-
+  
   constructor(
     message: string,
-    public readonly details?: Record<string, any>
+    public readonly cause?: unknown,
+    public readonly context?: Record<string, unknown>
   ) {
     super(message);
     this.name = this.constructor.name;
-    Error.captureStackTrace(this, this.constructor);
+    
+    // 保持错误堆栈
+    if (Error.captureStackTrace) {
+      Error.captureStackTrace(this, this.constructor);
+    }
   }
-
-  toJSON() {
+  
+  /**
+   * 转换为API响应格式
+   */
+  toApiResponse(): ApiErrorResponse {
     return {
-      name: this.name,
-      code: this.code,
-      message: this.message,
-      details: this.details,
-      statusCode: this.statusCode,
+      error: {
+        code: this.code,
+        message: this.message,
+        context: this.context
+      }
     };
   }
 }
 
 /**
- * OAuth2.1相关错误
+ * 验证错误
  */
-export class OAuth2Error extends BaseError {
-  readonly code = 'OAUTH2_ERROR';
+export class ValidationError extends BaseError {
+  readonly code = 'VALIDATION_ERROR';
   readonly statusCode = 400;
-
+  
   constructor(
     message: string,
-    public readonly oauthError: string,
-    public readonly oauthErrorDescription?: string,
-    details?: Record<string, any>
+    public readonly field?: string,
+    cause?: unknown
   ) {
-    super(message, details);
+    super(message, cause, { field });
   }
 }
 
@@ -331,6 +450,14 @@ export class OAuth2Error extends BaseError {
 export class AuthenticationError extends BaseError {
   readonly code = 'AUTHENTICATION_ERROR';
   readonly statusCode = 401;
+  
+  constructor(
+    message: string,
+    public readonly authMethod?: string,
+    cause?: unknown
+  ) {
+    super(message, cause, { authMethod });
+  }
 }
 
 /**
@@ -339,29 +466,249 @@ export class AuthenticationError extends BaseError {
 export class AuthorizationError extends BaseError {
   readonly code = 'AUTHORIZATION_ERROR';
   readonly statusCode = 403;
+  
+  constructor(
+    message: string,
+    public readonly requiredPermission?: string,
+    public readonly userPermissions?: string[],
+    cause?: unknown
+  ) {
+    super(message, cause, { 
+      requiredPermission, 
+      userPermissions 
+    });
+  }
+}
+
+/**
+ * 令牌相关错误
+ */
+export class TokenError extends BaseError {
+  readonly code = 'TOKEN_ERROR';
+  readonly statusCode = 401;
+}
+
+export class TokenGenerationError extends TokenError {
+  readonly code = 'TOKEN_GENERATION_ERROR';
+  readonly statusCode = 500;
+}
+
+export class TokenValidationError extends TokenError {
+  readonly code = 'TOKEN_VALIDATION_ERROR';
+}
+
+export class TokenExpiredError extends TokenError {
+  readonly code = 'TOKEN_EXPIRED';
+}
+
+export class TokenRevocationError extends TokenError {
+  readonly code = 'TOKEN_REVOCATION_ERROR';
+  readonly statusCode = 500;
+}
+
+/**
+ * 加密相关错误
+ */
+export class CryptoError extends BaseError {
+  readonly code = 'CRYPTO_ERROR';
+  readonly statusCode = 500;
+}
+
+/**
+ * 配置错误
+ */
+export class ConfigurationError extends BaseError {
+  readonly code = 'CONFIGURATION_ERROR';
+  readonly statusCode = 500;
+}
+
+/**
+ * OAuth2特定错误
+ */
+export class OAuth2Error extends BaseError {
+  readonly statusCode = 400;
+  
+  constructor(
+    public readonly errorCode: OAuth2ErrorCode,
+    message: string,
+    public readonly errorDescription?: string,
+    public readonly errorUri?: string,
+    cause?: unknown
+  ) {
+    super(message, cause, {
+      error: errorCode,
+      error_description: errorDescription,
+      error_uri: errorUri
+    });
+  }
+  
+  get code(): string {
+    return this.errorCode;
+  }
+  
+  /**
+   * 转换为OAuth2标准错误响应
+   */
+  toOAuth2Response(): OAuth2ErrorResponse {
+    return {
+      error: this.errorCode,
+      error_description: this.errorDescription || this.message,
+      error_uri: this.errorUri
+    };
+  }
+}
+
+/**
+ * OAuth2错误代码枚举
+ */
+export enum OAuth2ErrorCode {
+  INVALID_REQUEST = 'invalid_request',
+  INVALID_CLIENT = 'invalid_client',
+  INVALID_GRANT = 'invalid_grant',
+  UNAUTHORIZED_CLIENT = 'unauthorized_client',
+  UNSUPPORTED_GRANT_TYPE = 'unsupported_grant_type',
+  INVALID_SCOPE = 'invalid_scope',
+  ACCESS_DENIED = 'access_denied',
+  UNSUPPORTED_RESPONSE_TYPE = 'unsupported_response_type',
+  SERVER_ERROR = 'server_error',
+  TEMPORARILY_UNAVAILABLE = 'temporarily_unavailable'
 }
 ```
 
 ### 5.2 错误处理模式
 
 ```typescript
+// lib/utils/error-handler.ts
+
 /**
- * 结果类型定义
+ * 统一错误处理函数
+ * @param error - 捕获的错误
+ * @param context - 错误上下文信息
+ * @returns 永不返回，总是抛出处理后的错误
  */
-export type Result<T, E = Error> = { success: true; data: T } | { success: false; error: E };
+export function handleError(
+  error: unknown, 
+  context?: Record<string, unknown>
+): never {
+  // 如果已经是我们的自定义错误，直接重新抛出
+  if (error instanceof BaseError) {
+    throw error;
+  }
+  
+  // 处理标准Error对象
+  if (error instanceof Error) {
+    // 根据错误消息判断错误类型
+    if (error.message.includes('validation')) {
+      throw new ValidationError(error.message, undefined, error);
+    }
+    
+    if (error.message.includes('unauthorized') || error.message.includes('authentication')) {
+      throw new AuthenticationError(error.message, undefined, error);
+    }
+    
+    if (error.message.includes('forbidden') || error.message.includes('permission')) {
+      throw new AuthorizationError(error.message, undefined, undefined, error);
+    }
+    
+    if (error.message.includes('token')) {
+      throw new TokenError(error.message, error);
+    }
+  }
+  
+  // 未知错误类型
+  console.error('Unexpected error:', error, 'Context:', context);
+  throw new class extends BaseError {
+    readonly code = 'INTERNAL_ERROR';
+    readonly statusCode = 500;
+  }(
+    'An unexpected error occurred',
+    error,
+    context
+  );
+}
+
+/**
+ * 异步函数错误包装器
+ * @param fn - 要包装的异步函数
+ * @param context - 错误上下文
+ * @returns 包装后的函数
+ */
+export function withErrorHandling<T extends (...args: any[]) => Promise<any>>(
+  fn: T,
+  context?: Record<string, unknown>
+): T {
+  return (async (...args: Parameters<T>) => {
+    try {
+      return await fn(...args);
+    } catch (error) {
+      handleError(error, context);
+    }
+  }) as T;
+}
+
+/**
+ * 结果类型，用于函数式错误处理
+ */
+export type Result<T, E = BaseError> = 
+  | { success: true; data: T }
+  | { success: false; error: E };
 
 /**
  * 安全执行函数，返回Result类型
+ * @param fn - 要执行的函数
+ * @returns Result类型的结果
  */
-export async function safeExecute<T>(fn: () => Promise<T>): Promise<Result<T>> {
+export async function safeExecute<T>(
+  fn: () => Promise<T> | T
+): Promise<Result<T>> {
   try {
     const data = await fn();
     return { success: true, data };
   } catch (error) {
+    if (error instanceof BaseError) {
+      return { success: false, error };
+    }
+    
     return {
       success: false,
-      error: error instanceof Error ? error : new Error(String(error)),
+      error: new class extends BaseError {
+        readonly code = 'EXECUTION_ERROR';
+        readonly statusCode = 500;
+      }(
+        'Execution failed',
+        error
+      )
     };
+  }
+}
+
+/**
+ * 错误日志记录
+ */
+export function logError(
+  error: BaseError,
+  additionalContext?: Record<string, unknown>
+): void {
+  const logData = {
+    timestamp: new Date().toISOString(),
+    error: {
+      name: error.name,
+      code: error.code,
+      message: error.message,
+      statusCode: error.statusCode,
+      context: error.context,
+      stack: error.stack
+    },
+    additionalContext
+  };
+  
+  // 根据错误级别选择日志方法
+  if (error.statusCode >= 500) {
+    console.error('Server Error:', logData);
+  } else if (error.statusCode >= 400) {
+    console.warn('Client Error:', logData);
+  } else {
+    console.info('Error Info:', logData);
   }
 }
 
@@ -380,79 +727,466 @@ export async function validateToken(token: string): Promise<Result<JWTPayload>> 
 }
 ```
 
-## 6. 文档注释规范
+## 6. 测试要求
 
-### 6.1 JSDoc标准
+### 6.1 单元测试规范
 
-````typescript
-/**
- * 验证用户权限
- *
- * @description 检查用户是否具有指定资源的特定权限
- * @param {string} userId - 用户ID
- * @param {string} resource - 资源标识
- * @param {PermissionAction} action - 权限操作类型
- * @param {object} [options] - 可选配置
- * @param {boolean} [options.useCache=true] - 是否使用缓存
- * @param {number} [options.timeout=5000] - 超时时间（毫秒）
- * @returns {Promise<boolean>} 权限验证结果
- * @throws {AuthenticationError} 当用户未认证时
- * @throws {AuthorizationError} 当权限验证失败时
- *
- * @example
- * ```typescript
- * // 检查用户读取权限
- * const canRead = await checkPermission('user123', 'articles', PermissionAction.READ);
- *
- * // 使用选项
- * const canWrite = await checkPermission('user123', 'articles', PermissionAction.WRITE, {
- *   useCache: false,
- *   timeout: 3000
- * });
- * ```
- *
- * @since 1.0.0
- * @author 开发团队
- */
-export async function checkPermission(
-  userId: string,
-  resource: string,
-  action: PermissionAction,
-  options: {
-    useCache?: boolean;
-    timeout?: number;
-  } = {}
-): Promise<boolean> {
-  // 实现代码
-}
-````
+每个工具函数都必须包含完整的单元测试，测试覆盖率要求达到90%以上。
 
-### 6.2 类型注释
+```typescript
+// lib/oauth2/__tests__/pkce.test.ts
+import { describe, it, expect, vi } from 'vitest';
+import { generateCodeVerifier, generateCodeChallenge } from '../pkce';
+import { ValidationError, CryptoError } from '../../types/errors';
+
+describe('PKCE Utils', () => {
+  describe('generateCodeVerifier', () => {
+    it('should generate code verifier with default length', () => {
+      const verifier = generateCodeVerifier();
+      
+      expect(verifier).toBeDefined();
+      expect(typeof verifier).toBe('string');
+      expect(verifier.length).toBe(128);
+      expect(/^[A-Za-z0-9\-._~]+$/.test(verifier)).toBe(true);
+    });
+    
+    it('should generate code verifier with custom length', () => {
+      const length = 64;
+      const verifier = generateCodeVerifier(length);
+      
+      expect(verifier.length).toBe(length);
+    });
+    
+    it('should throw ValidationError for invalid length', () => {
+      expect(() => generateCodeVerifier(42)).toThrow(ValidationError);
+      expect(() => generateCodeVerifier(129)).toThrow(ValidationError);
+    });
+    
+    it('should generate unique verifiers', () => {
+      const verifier1 = generateCodeVerifier();
+      const verifier2 = generateCodeVerifier();
+      
+      expect(verifier1).not.toBe(verifier2);
+    });
+    
+    it('should handle crypto errors gracefully', () => {
+      // Mock crypto failure
+      const originalRandomBytes = vi.fn().mockImplementation(() => {
+        throw new Error('Crypto failure');
+      });
+      
+      vi.mock('crypto', () => ({
+        randomBytes: originalRandomBytes
+      }));
+      
+      expect(() => generateCodeVerifier()).toThrow(CryptoError);
+    });
+  });
+  
+  describe('generateCodeChallenge', () => {
+    it('should generate valid code challenge for S256 method', () => {
+      const verifier = 'dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk';
+      const challenge = generateCodeChallenge(verifier);
+      
+      expect(challenge).toBeDefined();
+      expect(typeof challenge).toBe('string');
+      expect(challenge).toBe('E9Melhoa2OwvFrEMTJguCHaoeK1t8URWbuGJSstw-cM');
+    });
+    
+    it('should return verifier for plain method', () => {
+      const verifier = 'test-verifier';
+      const challenge = generateCodeChallenge(verifier, 'plain');
+      
+      expect(challenge).toBe(verifier);
+    });
+    
+    it('should validate code verifier format', () => {
+      expect(() => generateCodeChallenge('')).toThrow(ValidationError);
+      expect(() => generateCodeChallenge('short')).toThrow(ValidationError);
+      expect(() => generateCodeChallenge('invalid@chars')).toThrow(ValidationError);
+    });
+    
+    it('should be deterministic for same input', () => {
+      const verifier = 'test-verifier-123';
+      const challenge1 = generateCodeChallenge(verifier);
+      const challenge2 = generateCodeChallenge(verifier);
+      
+      expect(challenge1).toBe(challenge2);
+    });
+  });
+});
+```
+
+### 6.2 集成测试规范
+
+```typescript
+// lib/oauth2/__tests__/token-manager.integration.test.ts
+import { describe, it, expect, beforeEach, afterEach } from 'vitest';
+import { TokenManager } from '../token-manager';
+import { TokenConfig, TokenPayload } from '../../types';
+
+describe('TokenManager Integration', () => {
+  let tokenManager: TokenManager;
+  let config: TokenConfig;
+  
+  beforeEach(() => {
+    config = {
+      jwtSecret: 'test-secret-key-with-sufficient-length',
+      issuer: 'https://test.oauth.com',
+      accessTokenTtl: 3600,
+      refreshTokenTtl: 86400
+    };
+    
+    tokenManager = new TokenManager(config);
+  });
+  
+  afterEach(() => {
+    // 清理资源
+  });
+  
+  describe('Token Lifecycle', () => {
+    it('should complete full token lifecycle', async () => {
+      const payload: TokenPayload = {
+        sub: 'user123',
+        client_id: 'client456',
+        scope: 'read write'
+      };
+      
+      // 生成访问令牌
+      const accessToken = await tokenManager.generateAccessToken(payload);
+      expect(accessToken).toBeDefined();
+      
+      // 验证访问令牌
+      const validatedPayload = await tokenManager.validateToken(accessToken);
+      expect(validatedPayload.sub).toBe(payload.sub);
+      expect(validatedPayload.client_id).toBe(payload.client_id);
+      
+      // 生成刷新令牌
+      const refreshToken = await tokenManager.generateRefreshToken(payload);
+      expect(refreshToken).toBeDefined();
+      
+      // 撤销令牌
+      const revoked = await tokenManager.revokeToken(accessToken);
+      expect(revoked).toBe(true);
+    });
+    
+    it('should handle token expiration', async () => {
+      // 创建短期令牌配置
+      const shortConfig = { ...config, accessTokenTtl: 1 };
+      const shortTokenManager = new TokenManager(shortConfig);
+      
+      const payload: TokenPayload = {
+        sub: 'user123',
+        client_id: 'client456',
+        scope: 'read'
+      };
+      
+      const token = await shortTokenManager.generateAccessToken(payload);
+      
+      // 等待令牌过期
+      await new Promise(resolve => setTimeout(resolve, 1100));
+      
+      // 验证过期令牌应该失败
+      await expect(shortTokenManager.validateToken(token))
+        .rejects.toThrow('Token has expired');
+    });
+  });
+});
+```
+
+### 6.3 性能测试规范
+
+```typescript
+// lib/oauth2/__tests__/performance.test.ts
+import { describe, it, expect } from 'vitest';
+import { generateCodeVerifier, generateCodeChallenge } from '../pkce';
+import { TokenManager } from '../token-manager';
+
+describe('Performance Tests', () => {
+  it('should generate code verifier efficiently', () => {
+    const iterations = 1000;
+    const startTime = performance.now();
+    
+    for (let i = 0; i < iterations; i++) {
+      generateCodeVerifier();
+    }
+    
+    const endTime = performance.now();
+    const avgTime = (endTime - startTime) / iterations;
+    
+    // 平均每次生成应该少于1ms
+    expect(avgTime).toBeLessThan(1);
+  });
+  
+  it('should handle concurrent token generation', async () => {
+    const tokenManager = new TokenManager({
+      jwtSecret: 'test-secret-key-with-sufficient-length',
+      issuer: 'https://test.oauth.com',
+      accessTokenTtl: 3600,
+      refreshTokenTtl: 86400
+    });
+    
+    const payload = {
+      sub: 'user123',
+      client_id: 'client456',
+      scope: 'read write'
+    };
+    
+    const concurrentRequests = 100;
+    const startTime = performance.now();
+    
+    const promises = Array.from({ length: concurrentRequests }, () =>
+      tokenManager.generateAccessToken(payload)
+    );
+    
+    const tokens = await Promise.all(promises);
+    const endTime = performance.now();
+    
+    expect(tokens).toHaveLength(concurrentRequests);
+    expect(tokens.every(token => typeof token === 'string')).toBe(true);
+    
+    // 并发生成100个令牌应该在合理时间内完成
+    expect(endTime - startTime).toBeLessThan(1000);
+  });
+});
+```
+
+### 6.4 测试配置
+
+```typescript
+// vitest.config.ts (针对lib目录)
+import { defineConfig } from 'vitest/config';
+import path from 'path';
+
+export default defineConfig({
+  test: {
+    globals: true,
+    environment: 'node',
+    include: ['lib/**/*.{test,spec}.{js,ts}'],
+    exclude: ['node_modules', 'dist'],
+    coverage: {
+      provider: 'v8',
+      reporter: ['text', 'json', 'html'],
+      include: ['lib/**/*.{js,ts}'],
+      exclude: [
+        'lib/**/*.{test,spec}.{js,ts}',
+        'lib/**/*.d.ts',
+        'lib/**/index.ts'
+      ],
+      thresholds: {
+        global: {
+          branches: 90,
+          functions: 90,
+          lines: 90,
+          statements: 90
+        }
+      }
+    },
+    setupFiles: ['./lib/test-setup.ts']
+  },
+  resolve: {
+    alias: {
+      '@': path.resolve(__dirname, './'),
+      '@/lib': path.resolve(__dirname, './lib')
+    }
+  }
+});
+```
+
+## 7. 文档注释规范
+
+### 7.1 JSDoc标准
+
+所有公开的函数、类、接口都必须包含完整的JSDoc注释：
 
 ```typescript
 /**
- * JWT令牌载荷
- * @interface JWTPayload
+ * 生成OAuth2授权码
+ * 
+ * 根据OAuth2.1规范生成安全的授权码，用于授权码流程中的临时凭证。
+ * 授权码具有短期有效性，通常在10分钟内过期。
+ * 
+ * @param clientId - OAuth2客户端标识符
+ * @param userId - 用户唯一标识符
+ * @param scope - 请求的权限范围，多个范围用空格分隔
+ * @param redirectUri - 授权完成后的重定向URI
+ * @param codeChallenge - PKCE代码挑战（可选，用于公共客户端）
+ * @param codeChallengeMethod - PKCE挑战方法，默认为'S256'
+ * @returns Promise<string> 生成的授权码字符串
+ * 
+ * @throws {ValidationError} 当输入参数格式无效时
+ * @throws {AuthorizationError} 当客户端无权限请求指定范围时
+ * @throws {CryptoError} 当随机数生成失败时
+ * 
+ * @example
+ * ```typescript
+ * // 基本用法
+ * const authCode = await generateAuthorizationCode(
+ *   'client123',
+ *   'user456', 
+ *   'read write',
+ *   'https://app.example.com/callback'
+ * );
+ * 
+ * // 使用PKCE的公共客户端
+ * const codeVerifier = generateCodeVerifier();
+ * const codeChallenge = generateCodeChallenge(codeVerifier);
+ * const authCodeWithPKCE = await generateAuthorizationCode(
+ *   'public-client',
+ *   'user789',
+ *   'read',
+ *   'https://mobile.app/callback',
+ *   codeChallenge,
+ *   'S256'
+ * );
+ * ```
+ * 
+ * @see {@link https://tools.ietf.org/html/rfc6749#section-4.1.2 | RFC 6749 Section 4.1.2}
+ * @see {@link https://tools.ietf.org/html/rfc7636 | RFC 7636 - PKCE}
+ * @since 1.0.0
+ * @version 1.2.0
+ * @author OAuth Team
  */
-export interface JWTPayload {
-  /** 主题（用户ID） */
-  sub: string;
-  /** 签发者 */
-  iss: string;
-  /** 受众 */
-  aud: string | string[];
-  /** 过期时间（Unix时间戳） */
-  exp: number;
-  /** 签发时间（Unix时间戳） */
-  iat: number;
-  /** 不早于时间（Unix时间戳） */
-  nbf?: number;
-  /** JWT ID */
-  jti?: string;
-  /** 权限范围 */
-  scope?: string;
-  /** 自定义声明 */
-  [key: string]: any;
+export async function generateAuthorizationCode(
+  clientId: string,
+  userId: string,
+  scope: string,
+  redirectUri: string,
+  codeChallenge?: string,
+  codeChallengeMethod: 'S256' | 'plain' = 'S256'
+): Promise<string> {
+  // 实现逻辑...
+}
+```
+
+### 7.2 类型注释
+
+```typescript
+/**
+ * OAuth2客户端配置信息
+ * 
+ * 定义OAuth2客户端的基本信息和安全配置，用于客户端注册和验证。
+ * 
+ * @interface OAuthClientConfig
+ * @since 1.0.0
+ */
+export interface OAuthClientConfig {
+  /** 
+   * 客户端唯一标识符
+   * @example 'web-app-client-123'
+   */
+  clientId: string;
+  
+  /** 
+   * 客户端密钥（仅限机密客户端）
+   * @description 用于客户端身份验证，公共客户端应为undefined
+   * @example 'super-secret-key-abc123'
+   */
+  clientSecret?: string;
+  
+  /** 
+   * 客户端类型
+   * @description 'confidential'表示能够安全存储凭据的客户端，'public'表示无法安全存储凭据的客户端
+   */
+  clientType: 'confidential' | 'public';
+  
+  /** 
+   * 客户端显示名称
+   * @example 'My Web Application'
+   */
+  name: string;
+  
+  /** 
+   * 允许的重定向URI列表
+   * @description 授权完成后允许重定向的URI列表，必须使用HTTPS（开发环境除外）
+   * @example ['https://app.example.com/callback', 'https://app.example.com/auth']
+   */
+  redirectUris: string[];
+  
+  /** 
+   * 允许的权限范围
+   * @description 客户端可以请求的最大权限范围
+   * @example ['read', 'write', 'admin']
+   */
+  allowedScopes: string[];
+  
+  /** 
+   * 访问令牌生存时间（秒）
+   * @default 3600
+   * @minimum 300
+   * @maximum 86400
+   */
+  accessTokenTtl: number;
+  
+  /** 
+   * 刷新令牌生存时间（秒）
+   * @default 2592000
+   * @minimum 3600
+   * @maximum 31536000
+   */
+  refreshTokenTtl: number;
+  
+  /** 
+   * 是否强制要求PKCE
+   * @description 公共客户端应始终为true，机密客户端可选
+   * @default true
+   */
+  requirePkce: boolean;
+  
+  /** 
+   * 客户端是否激活
+   * @description 非激活客户端无法进行授权
+   * @default true
+   */
+  isActive: boolean;
+  
+  /** 
+   * 客户端创建时间
+   * @readonly
+   */
+  readonly createdAt: Date;
+  
+  /** 
+   * 客户端最后更新时间
+   * @readonly
+   */
+  readonly updatedAt: Date;
+}
+```
+
+### 7.3 枚举注释
+
+```typescript
+/**
+ * OAuth2授权类型枚举
+ * 
+ * 定义OAuth2.1规范支持的授权类型，用于不同的授权场景。
+ * 
+ * @enum {string}
+ * @readonly
+ * @since 1.0.0
+ */
+export enum GrantType {
+  /** 
+   * 授权码流程
+   * @description 最安全的授权流程，适用于Web应用和移动应用
+   * @see {@link https://tools.ietf.org/html/rfc6749#section-4.1 | RFC 6749 Section 4.1}
+   */
+  AUTHORIZATION_CODE = 'authorization_code',
+  
+  /** 
+   * 客户端凭据流程
+   * @description 用于服务间通信，客户端直接使用自己的凭据获取访问令牌
+   * @see {@link https://tools.ietf.org/html/rfc6749#section-4.4 | RFC 6749 Section 4.4}
+   */
+  CLIENT_CREDENTIALS = 'client_credentials',
+  
+  /** 
+   * 刷新令牌流程
+   * @description 使用刷新令牌获取新的访问令牌
+   * @see {@link https://tools.ietf.org/html/rfc6749#section-6 | RFC 6749 Section 6}
+   */
+  REFRESH_TOKEN = 'refresh_token'
 }
 ```
 
@@ -700,28 +1434,286 @@ import { PermissionService } from '@/lib/permission';
 - RBAC权限系统
 ```
 
-## 10. 最佳实践
+## 9. 最佳实践
 
-### 10.1 性能优化
+### 9.1 性能优化
 
-- 使用缓存减少数据库查询
-- 避免在循环中进行异步操作
-- 合理使用Promise.all并行处理
-- 实现适当的错误边界
+```typescript
+// lib/utils/performance.ts
 
-### 10.2 安全考虑
+/**
+ * 性能监控装饰器
+ * @param threshold - 性能阈值（毫秒）
+ */
+export function performanceMonitor(threshold: number = 100) {
+  return function (target: any, propertyKey: string, descriptor: PropertyDescriptor) {
+    const originalMethod = descriptor.value;
+    
+    descriptor.value = async function (...args: any[]) {
+      const startTime = performance.now();
+      
+      try {
+        const result = await originalMethod.apply(this, args);
+        const endTime = performance.now();
+        const duration = endTime - startTime;
+        
+        if (duration > threshold) {
+          console.warn(`Performance warning: ${propertyKey} took ${duration.toFixed(2)}ms`);
+        }
+        
+        return result;
+      } catch (error) {
+        const endTime = performance.now();
+        const duration = endTime - startTime;
+        console.error(`Error in ${propertyKey} after ${duration.toFixed(2)}ms:`, error);
+        throw error;
+      }
+    };
+    
+    return descriptor;
+  };
+}
 
-- 敏感信息不要记录到日志
-- 使用常量时间比较防止时序攻击
-- 验证所有输入参数
-- 实现适当的速率限制
+/**
+ * 缓存管理器
+ */
+export class CacheManager {
+  private static cache = new Map<string, { value: any; expiry: number }>();
+  
+  /**
+   * 设置缓存
+   * @param key - 缓存键
+   * @param value - 缓存值
+   * @param ttl - 生存时间（毫秒）
+   */
+  static set(key: string, value: any, ttl: number = 300000): void {
+    const expiry = Date.now() + ttl;
+    this.cache.set(key, { value, expiry });
+  }
+  
+  /**
+   * 获取缓存
+   * @param key - 缓存键
+   * @returns 缓存值或undefined
+   */
+  static get<T>(key: string): T | undefined {
+    const item = this.cache.get(key);
+    
+    if (!item) return undefined;
+    
+    if (Date.now() > item.expiry) {
+      this.cache.delete(key);
+      return undefined;
+    }
+    
+    return item.value;
+  }
+  
+  /**
+   * 清理过期缓存
+   */
+  static cleanup(): void {
+    const now = Date.now();
+    for (const [key, item] of this.cache.entries()) {
+      if (now > item.expiry) {
+        this.cache.delete(key);
+      }
+    }
+  }
+}
 
-### 10.3 可维护性
+/**
+ * 缓存装饰器
+ * @param ttl - 缓存时间（毫秒）
+ */
+export function cached(ttl: number = 300000) {
+  return function (target: any, propertyKey: string, descriptor: PropertyDescriptor) {
+    const originalMethod = descriptor.value;
+    
+    descriptor.value = async function (...args: any[]) {
+      const cacheKey = `${propertyKey}_${JSON.stringify(args)}`;
+      const cached = CacheManager.get(cacheKey);
+      
+      if (cached !== undefined) {
+        return cached;
+      }
+      
+      const result = await originalMethod.apply(this, args);
+      CacheManager.set(cacheKey, result, ttl);
+      
+      return result;
+    };
+    
+    return descriptor;
+  };
+}
+```
+
+### 9.2 安全考虑
+
+```typescript
+// lib/utils/security.ts
+
+/**
+ * 安全工具函数
+ */
+export class SecurityUtils {
+  /**
+   * 安全的字符串比较（防止时序攻击）
+   * @param a - 字符串A
+   * @param b - 字符串B
+   * @returns 是否相等
+   */
+  static safeStringCompare(a: string, b: string): boolean {
+    if (a.length !== b.length) {
+      return false;
+    }
+    
+    let result = 0;
+    for (let i = 0; i < a.length; i++) {
+      result |= a.charCodeAt(i) ^ b.charCodeAt(i);
+    }
+    
+    return result === 0;
+  }
+  
+  /**
+   * 输入清理
+   * @param input - 输入字符串
+   * @returns 清理后的字符串
+   */
+  static sanitizeInput(input: string): string {
+    return input
+      .replace(/[<>"'&]/g, (char) => {
+        const entities: Record<string, string> = {
+          '<': '&lt;',
+          '>': '&gt;',
+          '"': '&quot;',
+          "'": '&#x27;',
+          '&': '&amp;'
+        };
+        return entities[char] || char;
+      })
+      .trim();
+  }
+  
+  /**
+   * 验证URL安全性
+   * @param url - 待验证的URL
+   * @returns 是否安全
+   */
+  static isSecureUrl(url: string): boolean {
+    try {
+      const parsed = new URL(url);
+      
+      // 只允许HTTPS和HTTP（开发环境）
+      if (!['https:', 'http:'].includes(parsed.protocol)) {
+        return false;
+      }
+      
+      // 禁止本地文件协议
+      if (['file:', 'ftp:', 'data:'].includes(parsed.protocol)) {
+        return false;
+      }
+      
+      // 检查主机名
+      if (parsed.hostname === 'localhost' && process.env.NODE_ENV === 'production') {
+        return false;
+      }
+      
+      return true;
+    } catch {
+      return false;
+    }
+  }
+  
+  /**
+   * 生成安全的随机字符串
+   * @param length - 字符串长度
+   * @returns 随机字符串
+   */
+  static generateSecureRandom(length: number): string {
+    const charset = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-._~';
+    let result = '';
+    
+    for (let i = 0; i < length; i++) {
+      const randomIndex = Math.floor(Math.random() * charset.length);
+      result += charset[randomIndex];
+    }
+    
+    return result;
+  }
+}
+
+/**
+ * 速率限制器
+ */
+export class RateLimiter {
+  private static requests = new Map<string, number[]>();
+  
+  /**
+   * 检查是否超过速率限制
+   * @param key - 限制键（如IP地址）
+   * @param limit - 限制次数
+   * @param window - 时间窗口（毫秒）
+   * @returns 是否允许请求
+   */
+  static isAllowed(key: string, limit: number, window: number): boolean {
+    const now = Date.now();
+    const requests = this.requests.get(key) || [];
+    
+    // 清理过期请求
+    const validRequests = requests.filter(time => now - time < window);
+    
+    if (validRequests.length >= limit) {
+      return false;
+    }
+    
+    validRequests.push(now);
+    this.requests.set(key, validRequests);
+    
+    return true;
+  }
+  
+  /**
+   * 清理过期数据
+   */
+  static cleanup(): void {
+    const now = Date.now();
+    for (const [key, requests] of this.requests.entries()) {
+      const validRequests = requests.filter(time => now - time < 3600000); // 1小时
+      if (validRequests.length === 0) {
+        this.requests.delete(key);
+      } else {
+        this.requests.set(key, validRequests);
+      }
+    }
+  }
+}
+```
+
+### 9.3 可维护性指南
 
 - 保持函数简洁，单一职责
 - 使用有意义的变量和函数名
 - 添加充分的测试覆盖
 - 定期重构和优化代码
+- 遵循SOLID原则
+- 使用适当的设计模式
+
+## 10. 总结
+
+本规范文档定义了OAuth2.1认证授权中心项目中`/lib/`目录下工具函数的开发标准，包括：
+
+1. **代码结构规范** - 统一的文件组织和命名约定
+2. **类型定义规范** - 完整的TypeScript类型系统
+3. **错误处理规范** - 统一的错误类型和处理机制
+4. **测试要求** - 全面的测试策略和覆盖率要求
+5. **文档注释规范** - 详细的JSDoc注释标准
+6. **版本管理** - 语义化版本控制和兼容性保证
+7. **最佳实践** - 性能优化、安全考虑和可维护性指南
+
+遵循这些规范将确保代码的一致性、可维护性和安全性，为项目的长期发展奠定坚实基础。
 
 ---
 
