--- a/docs/测试策略文档.md
+++ b/docs/测试策略文档.md
@@ -100,39 +100,260 @@
 
 ## 3. 单元测试
 
-### 3.1 测试框架
+### 3.1 测试框架配置
+
+#### Jest 到 Vitest 迁移计划
+
+**阶段一：环境准备 (1-2天)**
+1. 安装 Vitest 相关依赖
+2. 配置 Vitest 基础设置
+3. 设置测试环境和工具
+4. 验证基础功能正常
+
+**阶段二：配置迁移 (2-3天)**
+1. 迁移 Jest 配置到 Vitest
+2. 更新测试脚本和命令
+3. 配置覆盖率报告
+4. 设置 CI/CD 集成
+
+**阶段三：测试用例迁移 (3-5天)**
+1. 迁移单元测试用例
+2. 迁移集成测试用例
+3. 更新测试工具函数
+4. 验证所有测试通过
+
+**阶段四：优化和清理 (1-2天)**
+1. 移除 Jest 相关依赖
+2. 优化测试性能
+3. 更新文档和说明
+4. 团队培训和知识转移
+
+#### 依赖包迁移对照表
+
+```json
+{
+  "移除的 Jest 依赖": {
+    "jest": "^29.x",
+    "@types/jest": "^29.x",
+    "jest-environment-jsdom": "^29.x",
+    "ts-jest": "^29.x",
+    "@testing-library/jest-dom": "^6.x"
+  },
+  "新增的 Vitest 依赖": {
+    "vitest": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "jsdom": "^24.0.0",
+    "@testing-library/jest-dom": "^6.4.0"
+  },
+  "保持不变的依赖": {
+    "@testing-library/react": "^14.x",
+    "@testing-library/user-event": "^14.x",
+    "msw": "^2.x"
+  }
+}
+```
+
+#### API 迁移对照表
+
+```typescript
+// Jest vs Vitest API 对照
+const MIGRATION_MAP = {
+  // 基础断言
+  'expect().toBe()': 'expect().toBe()', // 相同
+  'expect().toEqual()': 'expect().toEqual()', // 相同
+  'expect().toMatchSnapshot()': 'expect().toMatchSnapshot()', // 相同
+  
+  // 模拟函数
+  'jest.fn()': 'vi.fn()',
+  'jest.mock()': 'vi.mock()',
+  'jest.spyOn()': 'vi.spyOn()',
+  'jest.clearAllMocks()': 'vi.clearAllMocks()',
+  'jest.resetAllMocks()': 'vi.resetAllMocks()',
+  
+  // 定时器
+  'jest.useFakeTimers()': 'vi.useFakeTimers()',
+  'jest.useRealTimers()': 'vi.useRealTimers()',
+  'jest.advanceTimersByTime()': 'vi.advanceTimersByTime()',
+  
+  // 环境变量
+  'process.env.NODE_ENV = "test"': 'vi.stubEnv("NODE_ENV", "test")',
+  
+  // 全局配置
+  'beforeAll': 'beforeAll', // 相同
+  'beforeEach': 'beforeEach', // 相同
+  'afterAll': 'afterAll', // 相同
+  'afterEach': 'afterEach', // 相同
+  'describe': 'describe', // 相同
+  'test': 'test', // 相同
+  'it': 'it' // 相同
+};
+```
 
 使用**Vitest**作为主要测试框架，配合以下工具：
 
+#### 主配置文件
 ```typescript
 // vitest.config.ts
 import { defineConfig } from 'vitest/config'
+import react from '@vitejs/plugin-react'
 import path from 'path'
 
 export default defineConfig({
+  plugins: [react()],
   test: {
-    globals: true,
+    // 测试环境配置
     environment: 'jsdom',
-    setupFiles: ['./vitest.setup.ts'],
+    setupFiles: ['./src/test/setup.ts'],
+    globals: true,
+    css: true,
+    
+    // 并发配置
+    pool: 'threads',
+    poolOptions: {
+      threads: {
+        singleThread: false,
+        isolate: true
+      }
+    },
+    
+    // 超时配置
+    testTimeout: 10000,
+    hookTimeout: 10000,
+    
+    // 覆盖率配置
     coverage: {
       provider: 'v8',
-      reporter: ['text', 'json', 'html'],
-      threshold: {
+      reporter: ['text', 'json', 'html', 'lcov'],
+      reportsDirectory: './coverage',
+      exclude: [
+        'node_modules/',
+        'src/test/',
+        '**/*.d.ts',
+        '**/*.config.*',
+        '**/coverage/**',
+        'src/app/layout.tsx',
+        'src/app/page.tsx',
+        '**/*.stories.*',
+        '**/*.test.*',
+        '**/*.spec.*'
+      ],
+      thresholds: {
         global: {
-          branches: 85,
-          functions: 85,
-          lines: 85,
-          statements: 85
+          branches: 80,
+          functions: 80,
+          lines: 80,
+          statements: 80
         }
       }
+    },
+    
+    // 文件匹配模式
+    include: [
+      'src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}',
+      'lib/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'
+    ],
+    exclude: [
+      'node_modules',
+      'dist',
+      '.next',
+      'coverage'
+    ],
+    
+    // 监听模式配置
+    watch: {
+      ignore: ['node_modules', 'dist', '.next', 'coverage']
     }
   },
   resolve: {
     alias: {
-      '@': path.resolve(__dirname, './')
+      '@': path.resolve(__dirname, './src'),
+      '@/lib': path.resolve(__dirname, './lib'),
+      '@/components': path.resolve(__dirname, './src/components'),
+      '@/utils': path.resolve(__dirname, './src/utils')
     }
   }
 })
+```
+
+#### 测试环境设置
+```typescript
+// src/test/setup.ts
+import '@testing-library/jest-dom'
+import { vi } from 'vitest'
+import { cleanup } from '@testing-library/react'
+import { afterEach, beforeAll, afterAll } from 'vitest'
+import { server } from './mocks/server'
+
+// 全局测试设置
+beforeAll(() => {
+  // 启动 MSW 服务器
+  server.listen({ onUnhandledRequest: 'error' })
+  
+  // 设置全局模拟
+  Object.defineProperty(window, 'matchMedia', {
+    writable: true,
+    value: vi.fn().mockImplementation(query => ({
+      matches: false,
+      media: query,
+      onchange: null,
+      addListener: vi.fn(),
+      removeListener: vi.fn(),
+      addEventListener: vi.fn(),
+      removeEventListener: vi.fn(),
+      dispatchEvent: vi.fn(),
+    })),
+  })
+  
+  // 模拟 ResizeObserver
+  global.ResizeObserver = vi.fn().mockImplementation(() => ({
+    observe: vi.fn(),
+    unobserve: vi.fn(),
+    disconnect: vi.fn(),
+  }))
+  
+  // 模拟 IntersectionObserver
+  global.IntersectionObserver = vi.fn().mockImplementation(() => ({
+    observe: vi.fn(),
+    unobserve: vi.fn(),
+    disconnect: vi.fn(),
+  }))
+})
+
+// 每个测试后清理
+afterEach(() => {
+  cleanup()
+  server.resetHandlers()
+  vi.clearAllMocks()
+})
+
+// 全局清理
+afterAll(() => {
+  server.close()
+})
+
+// 环境变量设置
+vi.stubEnv('NODE_ENV', 'test')
+vi.stubEnv('NEXT_PUBLIC_APP_URL', 'http://localhost:3000')
+```
+
+#### 包管理器脚本更新
+```json
+{
+  "scripts": {
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:ui": "vitest --ui --coverage",
+    "test:oauth": "vitest run src/lib/auth",
+    "test:components": "vitest run src/components",
+    "test:api": "vitest run src/app/api",
+    "test:e2e": "playwright test",
+    "test:all": "pnpm test:run && pnpm test:e2e"
+  }
+}
 ```
 
 ### 3.2 测试分类
