--- a/docs/系统架构设计.md
+++ b/docs/系统架构设计.md
@@ -150,10 +150,11 @@ model AccessToken {
 
 ### 开发工具
 
-- **包管理**: pnpm 8.x
+- **包管理**: npm (Node.js 内置)
 - **代码规范**: ESLint 8.x + Prettier 3.x
 - **类型检查**: TypeScript 5.6.x
-- **测试框架**: Vitest 1.x + Testing Library
+- **测试框架**: Jest 29.x + @testing-library/jest-dom
+- **JWT处理**: jose 6.0.11 (替代jsonwebtoken)
 - **Git钩子**: Husky 8.x + lint-staged 15.x
 - **容器化**: Docker 24.x + Docker Compose 2.x
 
