--- a/docs/权限体系设计.md
+++ b/docs/权限体系设计.md
@@ -1,14 +1,20 @@
 # OAuth2.1认证授权中心权限体系设计文档
 
-> **文档版本**: v2.0.0  
+> **文档版本**: v3.0.0  
 > **创建日期**: 2024-01-20  
-> **最后更新**: 2024-01-20  
+> **最后更新**: 2024-12-21  
 > **文档状态**: 正式版  
 > **维护团队**: 架构团队
 
 ## 文档摘要
 
-本文档详细描述了OAuth2.1认证授权中心的权限体系设计，包括RBAC权限模型、菜单权限、API权限、数据权限和操作权限的设计方案。确保系统具备企业级的细粒度权限控制能力。
+本文档详细描述了OAuth2.1认证授权中心的权限体系设计，这是一个专为**内网环境**设计的企业级权限控制系统。基于OAuth2.1+强制PKCE标准，使用Jose库进行JWT处理，支持复杂组织架构和权限继承，实现细粒度的权限控制能力。
+
+**核心特色**：
+- ✅ **OAuth2.1集成**: 与OAuth2.1授权码流程深度集成
+- ✅ **内网环境优化**: 专为企业内网环境设计的权限体系
+- ✅ **企业级RBAC**: 支持复杂组织架构和权限继承
+- ✅ **Jose库支持**: 使用jose@6.0.11进行JWT权限验证
 
 ## 目录
 
