--- a/docs/工具函数规范.md
+++ b/docs/工具函数规范.md
@@ -1,14 +1,14 @@
 # lib工具函数统一规范
 
-> **文档版本**: v1.0.0  
+> **文档版本**: v2.0.0  
 > **创建日期**: 2024-01-20  
-> **最后更新**: 2024-01-20  
+> **最后更新**: 2024-12-19  
 > **文档状态**: 正式版  
 > **维护团队**: 开发团队
 
 ## 文档摘要
 
-本文档定义了`/lib/`目录下工具函数的统一规范，包括代码结构、类型定义、错误处理、文档注释等标准，确保代码的一致性、可维护性和可测试性。
+本文档定义了`/lib/`目录下工具函数的统一规范，包括代码结构、类型定义、错误处理、文档注释等标准，确保代码的一致性、可维护性和可测试性。项目使用 Jose 库处理 JWT，采用 Jest 作为测试框架。
 
 ## 目录
 
@@ -44,6 +44,7 @@ lib/
 │   ├── api.ts              # API 响应类型
 │   ├── user.ts             # 用户相关类型
 │   ├── client.ts           # 客户端类型
+│   ├── jose.ts             # Jose JWT 相关类型
 │   └── permission.ts       # 权限类型
 ├── oauth2/                  # OAuth2 相关工具
 │   ├── index.ts            # OAuth2 工具导出
@@ -57,7 +58,7 @@ lib/
 │   ├── index.ts            # 认证工具导出
 │   ├── password.ts         # 密码处理
 │   ├── session.ts          # 会话管理
-│   ├── jwt.ts              # JWT 工具
+│   ├── jose-jwt.ts         # Jose JWT 工具
 │   ├── middleware.ts       # 认证中间件
 │   └── rate-limit.ts       # 速率限制
 ├── permission/              # 权限相关
@@ -110,7 +111,6 @@ export * from './auth';
 export * from './permission';
 export * from './utils';
 export * from './constants';
-export * from './database';
 
 // 分类导出
 export * as OAuth2 from './oauth2';
@@ -118,7 +118,6 @@ export * as Auth from './auth';
 export * as Permission from './permission';
 export * as Utils from './utils';
 export * as Constants from './constants';
-export * as Database from './database';
 ```
 
 ## 2. 文件组织规范
@@ -137,12 +136,13 @@ export * as Database from './database';
 /**
  * @fileoverview OAuth2.1 PKCE工具函数
  * @author 开发团队
- * @since 1.0.0
+ * @since 2.0.0
  */
 
 // 1. 导入依赖
 import { createHash, randomBytes } from 'crypto';
-import type { PKCEParams, CodeChallenge } from '../types/oauth';
+import { base64url } from 'jose';
+import type { PKCEParams, CodeChallenge } from '../types/oauth2';
 
 // 2. 常量定义
 const CODE_VERIFIER_LENGTH = 128;
