--- a/docs/测试策略文档.md
+++ b/docs/测试策略文档.md
@@ -1,6 +1,6 @@
-# OAuth2.1认证授权中心测试策略文档
+# OAuth2.1认证授权中心TDD测试策略文档
 
-**版本**: v2.0  
+**版本**: v3.0.0 (TDD重构版)  
 **创建日期**: 2024-12-19  
 **最后更新**: 2024-12-21  
 **文档状态**: 正式版  
@@ -8,14 +8,21 @@
 
 ## 文档摘要
 
-本文档定义了OAuth2.1认证授权中心的全面测试策略，包括单元测试、集成测试、端到端测试和性能测试。重点关注OAuth2.1标准流程的正确实现和安全性验证。
+本文档定义了OAuth2.1认证授权中心的TDD（测试驱动开发）策略，采用真实数据测试而非过度mock，重点关注OAuth2.1标准流程和RBAC权限模型的正确实现。
+
+**TDD核心原则**: 
+- ✅ **Red-Green-Refactor循环**：先写失败测试，再写最小代码，最后重构
+- ✅ **测试行为而非实现**：关注业务逻辑和用户行为验证
+- ✅ **真实数据测试**：使用真实数据库和测试用户，避免过度mock
+- ✅ **小步迭代**：每次只测试一个小功能，快速反馈
+- ✅ **独立性原则**：每个测试独立运行，不依赖其他测试
 
 **重要更新**: 
-- ✅ 统一使用Jest作为测试框架
-- ✅ 移除了关于独立login端点的测试策略
-- ✅ 专注于标准OAuth2.1授权码流程的测试覆盖
-- ✅ 更新了Jest与Next.js 15的集成配置
-- ✅ 连接真实Prisma数据库进行测试（无mock）
+- ✅ 统一使用Jest作为测试框架，移除Vitest
+- ✅ **删除所有性能测试相关内容**
+- ✅ 修复Jose库ESM导入问题
+- ✅ 建立真实测试用户和权限数据
+- ✅ 专注于OAuth2.1授权码流程和RBAC测试
 
 **技术栈确认**:
 ```json
@@ -23,60 +30,299 @@
   "测试框架": "Jest + @types/jest",
   "测试环境": "Node.js + Next.js 15",
   "数据库": "真实Prisma数据库 (无mock)",
-  "JWT库": "jose@6.0.11 (测试中使用)",
+  "JWT库": "jose@6.0.11 (ESM配置修复)",
   "覆盖率工具": "Jest内置覆盖率",
-  "Vitest": "已完全移除"
+  "TDD工具": "Jest + describe/it + beforeEach"
 }
 ```
 
 ## 目录
 
-1. [测试总体策略](#1-测试总体策略)
-2. [OAuth2.1核心流程测试](#2-oauth21核心流程测试)
-3. [Jest与Next.js 15集成](#3-jest与nextjs-15集成)
-4. [单元测试策略](#4-单元测试策略)
-5. [集成测试策略](#5-集成测试策略)
-6. [端到端测试策略](#6-端到端测试策略)
-7. [安全测试策略](#7-安全测试策略)
-8. [性能测试策略](#8-性能测试策略)
-9. [测试环境配置](#9-测试环境配置)
-10. [测试数据管理](#10-测试数据管理)
-11. [测试报告与监控](#11-测试报告与监控)
+1. [TDD测试策略](#1-tdd测试策略)
+2. [Jest配置与Jose库兼容](#2-jest配置与jose库兼容)
+3. [真实测试数据管理](#3-真实测试数据管理)
+4. [OAuth2.1流程TDD测试](#4-oauth21流程tdd测试)
+5. [RBAC权限TDD测试](#5-rbac权限tdd测试)
+6. [API端点单元测试](#6-api端点单元测试)
+7. [集成测试策略](#7-集成测试策略)
+8. [测试环境配置](#8-测试环境配置)
+9. [测试报告与监控](#9-测试报告与监控)
 
-## 1. 测试总体策略
+## 1. TDD测试策略
 
-### 1.1 测试原则
+### 1.1 TDD核心原则
 
-- **标准合规性**: 确保完全符合OAuth2.1和OIDC标准
-- **安全优先**: 重点测试安全机制和漏洞防护
-- **自动化优先**: 最大化测试自动化覆盖率
-- **持续集成**: 与CI/CD流程深度集成
-- **真实场景**: 模拟真实的使用场景和边界条件
-- **Jose库优先**: 所有JWT测试使用Jose库而非jsonwebtoken
+遵循Kent Beck的TDD原则，专注于"编写干净可用的代码"：
 
-### 1.2 测试金字塔
+- **Red阶段**: 编写一个失败的测试，明确需求
+- **Green阶段**: 编写最小代码使测试通过
+- **Refactor阶段**: 重构代码提高质量，保持测试通过
+- **小步前进**: 每次迭代只关注一个小功能
+- **测试先行**: 测试定义了代码应该做什么
+
+### 1.2 测试层级策略
 
 ```
+OAuth2.1 + RBAC测试金字塔
          /\
-        /E2E\     (10%) - 端到端测试
+        /集成\     (30%) - OAuth2.1流程集成测试
        /______\
       /        \
-     /Integration\ (20%) - 集成测试
+     /  单元测试  \  (70%) - API端点和RBAC单元测试
     /__________\
-   /            \
-  /  Unit Tests  \  (70%) - 单元测试
- /________________\
 ```
+
+**注意**: 删除了性能测试和E2E测试，专注于核心业务逻辑验证。
 
 ### 1.3 测试覆盖率目标
 
 | 测试类型 | 覆盖率目标 | 关键指标 |
 |---------|-----------|----------|
-| 单元测试 | ≥ 90% | 代码行覆盖率、分支覆盖率 |
-| 集成测试 | ≥ 80% | API端点覆盖率、业务流程覆盖率 |
-| 端到端测试 | ≥ 70% | 用户场景覆盖率、关键路径覆盖率 |
+| 单元测试 | ≥ 85% | OAuth2.1端点覆盖率、RBAC逻辑覆盖率 |
+| 集成测试 | ≥ 90% | 完整授权码流程覆盖率 |
 
-## 2. OAuth2.1核心流程测试
+### 1.4 测试驱动原则
+
+**避免的反模式**:
+- ❌ 过度使用mock/stub
+- ❌ 测试实现细节而非行为
+- ❌ 一个测试验证多个行为
+- ❌ 测试之间相互依赖
+- ❌ 复杂的测试逻辑
+
+**推荐的实践**:
+- ✅ 使用真实数据库和测试用户
+- ✅ 测试API行为和权限验证
+- ✅ 每个测试只验证一个行为
+- ✅ 描述性的测试名称
+- ✅ 快速的测试执行
+
+## 2. Jest配置与Jose库兼容
+
+### 2.1 Jest配置修复
+
+解决Jose库ESM导入问题：
+
+```typescript
+// jest.config.ts
+import type { Config } from '@jest/types';
+
+const config: Config.InitialOptions = {
+  preset: 'ts-jest',
+  testEnvironment: 'node',
+  roots: ['<rootDir>'],
+  testMatch: ['**/__tests__/**/*.(ts|js)', '**/*.(test|spec).(ts|js)'],
+  transform: {
+    '^.+\\.(ts|tsx)$': 'ts-jest',
+  },
+  // 关键: 修复Jose库ESM导入问题
+  transformIgnorePatterns: [
+    'node_modules/(?!(jose)/)'
+  ],
+  moduleNameMapping: {
+    '^jose$': '<rootDir>/node_modules/jose/dist/node/esm/index.js'
+  },
+  extensionsToTreatAsEsm: ['.ts'],
+  globals: {
+    'ts-jest': {
+      useESM: true
+    }
+  },
+  setupFilesAfterEnv: ['<rootDir>/jest.setup.ts'],
+  collectCoverageFrom: [
+    'app/api/**/*.{ts,js}',
+    'lib/**/*.{ts,js}',
+    '!**/*.d.ts',
+    '!**/node_modules/**',
+  ],
+  coverageDirectory: 'coverage',
+  coverageReporters: ['text', 'lcov', 'html'],
+  testTimeout: 10000,
+};
+
+export default config;
+```
+
+### 2.2 Jest Setup配置
+
+```typescript
+// jest.setup.ts
+import { PrismaClient } from '@prisma/client';
+import { beforeAll, afterAll, beforeEach } from '@jest/globals';
+
+declare global {
+  var prisma: PrismaClient;
+}
+
+beforeAll(async () => {
+  global.prisma = new PrismaClient({
+    datasources: {
+      db: {
+        url: process.env.TEST_DATABASE_URL || 'file:./test.db'
+      }
+    }
+  });
+  
+  // 连接数据库
+  await global.prisma.$connect();
+});
+
+afterAll(async () => {
+  // 清理并断开连接
+  await global.prisma.$disconnect();
+});
+
+beforeEach(async () => {
+  // 每个测试前清理数据
+  await cleanupTestData();
+});
+
+async function cleanupTestData() {
+  await global.prisma.token.deleteMany();
+  await global.prisma.authorizationCode.deleteMany();
+  await global.prisma.userRole.deleteMany();
+  await global.prisma.rolePermission.deleteMany();
+  // 保留测试用户和客户端数据
+}
+```
+
+## 3. 真实测试数据管理
+
+### 3.1 测试用户数据
+
+建立不同权限级别的测试用户：
+
+```typescript
+// __tests__/setup/test-data.ts
+export interface TestUser {
+  id: string;
+  username: string;
+  email: string;
+  password: string;
+  roles: string[];
+  permissions: string[];
+}
+
+export const testUsers: Record<string, TestUser> = {
+  systemAdmin: {
+    id: 'test-system-admin-001',
+    username: 'system.admin',
+    email: 'system.admin@test.com',
+    password: 'Test123!@#',
+    roles: ['SYSTEM_ADMIN'],
+    permissions: [
+      'menu:*:*',
+      'api:*:*',
+      'system:admin:full'
+    ]
+  },
+  
+  userAdmin: {
+    id: 'test-user-admin-001',
+    username: 'user.admin',
+    email: 'user.admin@test.com',
+    password: 'Test123!@#',
+    roles: ['USER_ADMIN'],
+    permissions: [
+      'menu:users:*',
+      'api:users:*',
+      'menu:dashboard:view'
+    ]
+  },
+  
+  permissionAdmin: {
+    id: 'test-permission-admin-001',
+    username: 'permission.admin',
+    email: 'permission.admin@test.com',
+    password: 'Test123!@#',
+    roles: ['PERMISSION_ADMIN'],
+    permissions: [
+      'menu:roles:*',
+      'menu:permissions:*',
+      'api:roles:*',
+      'api:permissions:*'
+    ]
+  },
+  
+  regularUser: {
+    id: 'test-regular-user-001',
+    username: 'regular.user',
+    email: 'regular.user@test.com',
+    password: 'Test123!@#',
+    roles: ['USER'],
+    permissions: [
+      'menu:dashboard:view'
+    ]
+  },
+  
+  noPermissionUser: {
+    id: 'test-no-permission-001',
+    username: 'no.permission',
+    email: 'no.permission@test.com',
+    password: 'Test123!@#',
+    roles: [],
+    permissions: []
+  }
+};
+```
+
+### 3.2 测试客户端数据
+
+```typescript
+export interface TestClient {
+  id: string;
+  clientId: string;
+  clientSecret?: string;
+  name: string;
+  redirectUris: string[];
+  scopes: string[];
+  grantTypes: string[];
+}
+
+export const testClients: Record<string, TestClient> = {
+  webApp: {
+    id: 'test-client-web-001',
+    clientId: 'test-web-client',
+    clientSecret: 'test-web-secret-123',
+    name: '测试Web应用',
+    redirectUris: [
+      'http://localhost:3000/callback',
+      'http://localhost:3001/auth/callback'
+    ],
+    scopes: ['openid', 'profile', 'email'],
+    grantTypes: ['authorization_code', 'refresh_token']
+  }
+};
+```
+
+### 3.3 PKCE测试工具
+
+```typescript
+// __tests__/setup/pkce-utils.ts
+import * as crypto from 'crypto';
+
+export interface PKCEPair {
+  codeVerifier: string;
+  codeChallenge: string;
+  codeChallengeMethod: 'S256';
+}
+
+export function generatePKCE(): PKCEPair {
+  const codeVerifier = crypto.randomBytes(32).toString('base64url');
+  const codeChallenge = crypto
+    .createHash('sha256')
+    .update(codeVerifier)
+    .digest('base64url');
+    
+  return {
+    codeVerifier,
+    codeChallenge,
+    codeChallengeMethod: 'S256'
+  };
+}
+```
+
+## 4. OAuth2.1流程TDD测试
 
 ### 2.1 授权码流程测试
 
